Misc work done yesterday, frantically pulling stuff together before book 1 printing. Which happened. And book 2 printing happened as well

--- a/4T/ch10.tex
+++ b/4T/ch10.tex
@@ -637,10 +637,11 @@ Synchronous: Red
 
 \jumpHeadline{ VP TOTALS } 
 
+{\parskip=0pt
 Hayley 4
 
 Oliver 8
-
+}
 
 
 \jumpHeadline{ Quotes }  
@@ -691,10 +692,15 @@ Oliver 8
 }
 \extraIndent{- Hayley and Dr. Gerhauser}
 
-\vspace{\fill}
+%\vspace{\fill}
 
 \begin{flushright}
 \textsubscript{last edited by \textbf{Nathaniel Ford} @ 05/07/15 4:28pm}
 % Exported @ 08/23/15 10:27pm
 \end{flushright}
 
+\begin{flushright}
+~
+\vskip 15em
+\includegraphics[width=6cm]{img/book1_jaya_stand_misc.jpg}
+\end{flushright}
