--- a/4T/ch12.tex
+++ b/4T/ch12.tex
@@ -140,7 +140,7 @@ The same voice says, ``Look out behind you!''  Jonah turns, there is a flash of 
 
 \textit{\textbf{{[}0 tokens left on Nominal for Jonah, hasn't started Solid yet{]}}}
 
-
+\newpage
 \sceneHeadline{THE TANK: Jaya }
 
 Because of Jaya's drug tolerance, it takes a while for her to conk out.  She spends most of the time making awkward eye contact with Dr. Gerhauser and Swan and anyone else staring at her in the Tank.  But then she blinks and she's walking into a bar.
@@ -149,7 +149,7 @@ Because of Jaya's drug tolerance, it takes a while for her to conk out.  She spe
 
 \textit{{[}Trace enters the pool.  4 threat tokens{]}}
 
-{[}{\color[RGB]{17,85,204} \hl{Queue epic soundtrack for Jaya's tank scene} }{]}\footnote{\textbf{Suko T }Sweet!  Saiorse was so amazing in that movie. \textsubscript{12/08/12 12:05am}}
+{[} \hl{Queue epic soundtrack for Jaya's tank scene}{]}\footnote{\textbf{Rebecca as editor} linked to https://www.youtube.com/watch?v=HBmwcuLa1as}\footnote{\textbf{Suko T }Sweet!  Saiorse was so amazing in that movie. \textsubscript{12/08/12 12:05am}}
 
 
 
@@ -441,7 +441,7 @@ Solid: Orange
 Synchronous: Red
 }
 
-
+\newpage
 \jumpHeadline{VP TOTALS }  
 
 Jaya: 2
