--- a/4T/ch13.tex
+++ b/4T/ch13.tex
@@ -276,7 +276,7 @@ Jaya pauses, senses a trap, but doesn't know what else to say.  ``Yes,'' she say
 
 As she gets up to leave, Rook tells her, ``\hl{Please inform your team that with their new access you can visit floors 1, 2, 3 (Medbay), and 5 (storage).  You are not authorized to go to Alpha Zed sector, or to floors 4 (Brig), 6 or 7}\footnote{\textbf{q.google }I've added a note about this to the SAC-09 doc.  Please fill out/amend. \textsubscript{01/27/13 11:45am}}.''  The barrage of numbers and code words is clearly too much for Jaya and her visible discomfort and confused muttering manages to signal what her words somewhat fail to- Rook says he'll send a sheet down with the information.  
 
-
+\newpage
 \sceneHeadline{Morgan's Office}
 
 Oliver goes to Morgan's office.  He asks about the Orc of Anglia and mentions how he is using scare tactics against his family.  Morgan tells him to just skip to his actual question and he asks for information to allow him to go on the offensive, rather than being defensive all the time.
