--- a/4T/ch15.tex
+++ b/4T/ch15.tex
@@ -231,7 +231,9 @@ Jaya looks around through the binoculars, trying to learn to use them.  At one p
 
 ``Ah... almost everything is strange to me.  Most people don't want to hear all of it.''
 
-``Well then why did you mention this?''``Because it was something I was taught to keep track of because it is often important.''
+``Well then why did you mention this?''
+
+``Because it was something I was taught to keep track of because it is often important.''
 
 ``Well things like that then.''
 
