--- a/4T/ch17.tex
+++ b/4T/ch17.tex
@@ -124,7 +124,7 @@ She heads to a bar and gets into a bar fight that goes poorly since she has forg
 
 
 
-
+\newpage
 \sceneHeadline{Shore Leave: Oliver }
 
 % there's a gnarly page break here because TOO MANY FOOTNOTES!
