--- a/4T/ch18.tex
+++ b/4T/ch18.tex
@@ -84,7 +84,7 @@ Morgan announces, ``15 minute rest and then we'll come get you in your bunks.''
 
 Back at their bunks, Oliver swaps out his training rifle for his real rifle {[}\textit{Refresh: Sniper Rifle}{]} and Jaya calms her nerves with a healthy dose of alcohol {[}\textit{Refresh: Adrenaline Junkie}{]}.  Hayley quietly reminds Jaya that Hayley is a Constable now, not a Constable Trainee.  Jaya apologizes and praises Hayley for bringing it up privately instead of publically and possibly embarrassing Jaya. \hl{Jaya loudly says that perhaps Hayley should instruct some of the other members on the team about such smart behavior}\footnote{\textbf{q.google }You know, I missed that completely.... \textsubscript{04/06/13 3:02pm}}\footnote{$\rightarrow$\textbf{Suko T }And Oliver pointedly ignored it.  Poor Jaya. \textsubscript{04/06/13 4:35pm}}\footnote{$\rightarrow$\textbf{q.google }No I don't mean Jonah missed it.  I didn't hear the conversation at all. \textsubscript{04/06/13 6:35pm}}.
 
-
+\newpage
 \sceneHeadline{Jaya and Hayley}
 
 After what happened earlier, Hayley makes sure that everyone is dressed and ready at the 15 minute mark.  At the 20 minute mark, Jari comes in and says, ``Senior Constable Parvadi, Constable Hayley, come with me.''  Jari then goes to PG2's bunk and calls out Lackovich and Carruthers.  Jaya suggests Javier and Davis instead but Jari says that Agent Morgan has her reasons.
