--- a/4T/ch19.tex
+++ b/4T/ch19.tex
@@ -574,7 +574,7 @@ Oliver pauses, looks at Hayley and says, ``I'll try to help you with that.''
 
 ``Thank you,'' she says, looking both grateful and terrified.
 
-
+\newpage
 
 \jumpHeadline{Shore Leave }  
 
@@ -635,7 +635,7 @@ Dr. Gerhauser looks at him consideringly and then stands up and walks over to hi
 
 ``Yes, I understand.  But that is \textit{not} true now,'' says Jonah.
 
-
+\newpage
 \sceneHeadline{Shore Leave: Oliver and Dr. Gerhauser}
 
 Oliver gets off of the train.  Night is falling and there is a light rain misting the air.  As he walks down the darkened street, up ahead of him he can see a tall cloaked figure detach from the shadows and start walking toward him.  Oliver alters his path to avoid them, arranging things so that he ends up on a side street just off the main road.  He sets his bag down and pulls out his handgun and waits for the figure to approach.
@@ -684,7 +684,7 @@ Jaya frowns and then offers Oliver some of the bottle she is holding.  When he t
 Oliver decides that a night out drinking with Jaya beats an evening with his father, so the two go to a bar together.  They don't hang out together once they get there though.
 
 
-\sceneHeadline{Shore Leave: }\textbf{\hl{Hayley and Octavia}}\footnote{\textbf{q.google }I don't know this is possible, but this manages to be the most painful Hayley conversation I can remember. \textsubscript{04/16/13 9:53am}}
+\sceneHeadline{Shore Leave: \hl{Hayley and Octavia}}\footnote{\textbf{q.google }I don't know this is possible, but this manages to be the most painful Hayley conversation I can remember. \textsubscript{04/16/13 9:53am}}
 
 Hayley decides not to go see Gillian because she is feeling too upset to be useful.  She actually spends time reading the Patrol Handbook, washing all of her clothes and uniforms, cleaning the barracks until they are sparkling and then exercising again until she is so exhausted that she can finally sleep for a few hours.  
 
@@ -694,8 +694,8 @@ The next day, Swan shows up and says, ``I know you've decided to stay here, but 
 
 Hayley looks alarmed and scrambles to get ready.  She packs up everything (except Signe's letter) that was not given to her by the TA: all her civilian clothes, shoes and notebooks, and neatly stores it in her duffle bag.
 
-
-
+%hoooooorrible hack to fit this all on the last page because it ends on an even or pushes 2 pages of near-blank
+{\parskip=3mm
 She arrives at Gillian's new apartment in Terminus.  The door is slightly ajar which makes her nervous.  She looks around for Gillian's security detail, and then listens for a minute at the door.  When she hears nothing, she announces herself.  
 
 
@@ -746,6 +746,7 @@ Hayley looks around the empty apartment sadly.  She carefully stows the duffle b
 
 
 \textbf{Backlash Token Pool: 0}
+}
 
 \jumpHeadline{Ongoing Challenges }  
 
@@ -766,6 +767,8 @@ Hayley looks around the empty apartment sadly.  She carefully stows the duffle b
 
 \jumpHeadline{Quotes }
 
+{\parskip=0pt
+
  ``I don't want to shoot anyone.  But the good news is if there \textit{was} shooting, I'm a medic.''
 
 \extraIndent{        - Jonah}
@@ -785,8 +788,8 @@ Hayley looks around the empty apartment sadly.  She carefully stows the duffle b
 ``When all else fails, try leadership.''
 
 \extraIndent{        - Adam}
-
-\vspace{\fill}
+}
+%\vspace{\fill}
 
 \begin{flushright}
 \textsubscript{last edited by \textbf{Suko T} @ 05/12/15 12:50am}
