--- a/4T/ch20.tex
+++ b/4T/ch20.tex
@@ -667,7 +667,7 @@ Jonah: 1
 
 Oliver: 1
 }
-
+\newpage
 \jumpHeadline{Quotes }
 
 ``You can take my pants.  You can take my brain.  But don't take my gun.''
@@ -694,3 +694,5 @@ Oliver: 1
 \vskip 0em
 \includegraphics[width=12cm]{img/book1_jaya_misc_tough.png}
 \end{center}
+\newpage
+~
