--- a/4T/ch21.tex
+++ b/4T/ch21.tex
@@ -423,7 +423,7 @@ Oliver tries to get to a position where he can see the yard from a lower level/t
 
 
 
-\begin{itemize}
+\begin{itemize}[noitemsep,topsep=0pt]
 \item Refresh: Hardened 4 (Oliver)
 \item Challenge: Notice Snipers 1. Binoculars 2 (Oliver) $\rightarrow$ Overcome! \textbf{1 VP (Oliver)}
 \item Challenge: Don't frighten the Norms 2.  Social Chameleon 4 (Jonah) $\rightarrow$ Overcome! \textbf{2 VP (Jonah)}
@@ -443,12 +443,13 @@ Oliver tries to get to a position where he can see the yard from a lower level/t
 
 \jumpHeadline{ VP TOTALS }  
 
+{\parskip=0pt
 Hayley: 4
 
 Jonah: 4
 
 Oliver: 2
-
+}
 
 \jumpHeadline{Quotes }
 
