--- a/4T/ch22.tex
+++ b/4T/ch22.tex
@@ -52,7 +52,7 @@ The Vengeance of Octavian: Red
 }
 
 
-
+\newpage
 \jumpHeadline{Borrough Station}
 
 \textbf{{[}2 Tokens from last session{]}}
@@ -401,7 +401,7 @@ Lackovich and Jaya are trying to climb up the ladder and Lackovich is getting in
 
 
 
-\begin{itemize}
+\begin{itemize}[noitemsep,topsep=0pt]
 \item Refresh Operator 1 (Oliver)
 \item Refresh Vigilant 3 (Jonah)
 \item Challenge: Find Dev 2. Nose for Breadcrumbs 2 (Hayley) $\rightarrow$ Matched
