--- a/4T/ch23.tex
+++ b/4T/ch23.tex
@@ -37,13 +37,12 @@ The Vengeance of Octavian: Red {[}Activated{]}
 
 \jumpHeadline{Flaws from last session: }
 
-\begin{itemize}
+\begin{itemize}[noitemsep,topsep=0pt]
 \item  {\color[RGB]{255,0,0}Flaw: Injured ribs 1 (Hayley)} 
 \item  {\color[RGB]{255,0,0}Flaw: Winded 2 (Oliver)} 
 \item  {\color[RGB]{255,0,0}Flaw: Damaged Gun 2 (Oliver)}  
 \item  {\color[RGB]{255,0,0}Flaw: Stunned 1 (Oliver)} 
 \end{itemize}
-
 
 \jumpHeadline{The Factory}
 
@@ -286,7 +285,7 @@ Next up: Part 3: Shit goes ill.
 
 
 
-\begin{itemize}
+\begin{itemize}[noitemsep,topsep=0pt]
 \item Refresh: Street Medic 2 (Jonah)
 \item Challenge 3: Avoid bullets and close with the Orc.  Armor 2 (Jaya) + Senior Constable 2 (Jaya) + Sidearm 3 (Jaya)  $\rightarrow$ Overcome! \textbf{3 VP (Jaya)}
 \item Reduce Flaw Winded 2 (Oliver).  Street Medic 2 (Jonah) $\rightarrow$ Flaw: Winded 1 (Oliver) {\color[RGB]{255,0,0}. }  Reduce Flaw 1 (Oliver).  MedKit 1 (Oliver) $\rightarrow$  {\color[RGB]{255,0,0}Flaw: slightly winded 0 (Oliver)} 
@@ -324,7 +323,7 @@ Next up: Part 3: Shit goes ill.
 \textbf{\hl{FLAW total at end of all three Borroughs Sessions} }\footnote{\textbf{Suko T }Yikes, I think that means this is 25 more points of Backlash? \textsubscript{04/02/14 4:25pm}}\\
 \underline{   (after in-session reductions, so some are 0) }
 
-\begin{itemize}
+\begin{itemize}[noitemsep,topsep=0pt]
 \item  {\color[RGB]{255,0,0}Flaw: Injured ribs 1 (Hayley)} 
 \item  {\color[RGB]{255,0,0}Flaw: Stunned 1 (Oliver)} 
 \item  {\color[RGB]{255,0,0}Flaw: Slightly winded 0 (Oliver)} 
@@ -341,6 +340,8 @@ Next up: Part 3: Shit goes ill.
 
 \jumpHeadline{ VP TOTALS } 
 
+{
+  \parskip=0pt
 Jaya: \hl{8}\footnote{\textbf{Suko T }missing a 1 point Overcome Challenge somewhere, my total above is only 7 \textsubscript{04/02/14 4:12pm}}\footnote{$\rightarrow$\textbf{Rebecca S. }Nate has my paper I think, which should have the notes on it... \textsubscript{04/24/14 8:36pm}}
 
 Jonah: \hl{6}\footnote{\textbf{Suko T }missing a 1 point Overcome Challenge somewhere, my total above is only 5 \textsubscript{04/02/14 4:12pm}}
@@ -348,6 +349,7 @@ Jonah: \hl{6}\footnote{\textbf{Suko T }missing a 1 point Overcome Challenge some
 Hayley: 1
 
 Oliver: 0
+}
 
 
 
@@ -359,7 +361,7 @@ Oliver: 0
       \extraIndent{- Rebecca}
 
 
-
+\newpage
 ``High on drugs, low on blood.''
 
       \extraIndent{  - Rebecca}
@@ -378,13 +380,9 @@ Oliver: ``She didn't send me here to save you.''
 \vspace{\fill}
 
 \begin{flushright}
+\includegraphics[width=8cm]{img/ch23_twisty_arm.png}
+
 \textsubscript{last edited by \textbf{Nathaniel Ford} @ 05/07/15 4:28pm}
 % Exported @ 08/24/15 11:00am
 \end{flushright}
 
-
-\begin{flushright}
-~
-\vskip 10em
-\includegraphics[width=8cm]{img/ch23_twisty_arm.png}
-\end{flushright}
