--- a/4T/ch24.tex
+++ b/4T/ch24.tex
@@ -520,7 +520,9 @@ Douglas cuffs the sword to his belt (which apparently doesn't significantly impa
 
 They head back to the train.  As they walk, Jaya asks Jayce, ``How did he find you?''
 
-``Well he seems to have been watching me for a while.  I guess he saw that I was the coolest guy around.  Er - for my area!'' Jayce amends hastily when it looks like Jaya may take offense to that claim.  ``I mean, you know where I come from.''``Yeah,'' says Jaya, mollified.
+``Well he seems to have been watching me for a while.  I guess he saw that I was the coolest guy around.  Er - for my area!'' Jayce amends hastily when it looks like Jaya may take offense to that claim.  ``I mean, you know where I come from.''
+
+``Yeah,'' says Jaya, mollified.
 
 
 
@@ -757,7 +759,7 @@ Morgan tells Jonah, ``Keep the key with you at all times.  At some point, it may
 
 
 
-
+\newpage
 \jumpHeadline{Quotes }
 
 \quotedDialog{
