--- a/4T/ch25.tex
+++ b/4T/ch25.tex
@@ -66,7 +66,7 @@ Oliver is in a wheelchair.  When she speaks he fails to recognize Octavia's voic
 
 Kneeling in front of a brazier is a tall beautiful man.  ``\hl{Astarte}\footnote{\textbf{Adam Kenney }So out of curiosity, do we think this is the name of Sister \#3? \textsubscript{06/08/14 11:58am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }The other PCs were privy to certain information, including her name, before you were. Which is why they freaked when you called your sister Ester. I think Suko gave you access to the session notes - let me know if not! \textsubscript{06/08/14 12:15pm}} taught us a great deal about memory, about it's beauty and it's terror. I have brought you here to witness an act of memory, an act of willpower.''  The man pours hot oil shit on his face and it fucking melts.  Creepy. Still alive but really really gross.  Familiar raspy voice asks Oliver, ``Are you sure?''
 
- {\LARGE \textit{ {\color[RGB]{102,102,102}this was mostly scripted} } } 
+ \textit{ {\color[RGB]{102,102,102}this was mostly scripted} }
 
 \sceneHeadline{Scene 2 : The Forum}
 
@@ -148,10 +148,10 @@ Explosions are approaching. ``Shit! Get down!'' says Oliver
 
 Jonah starts to lecturing about the nature of the villains.  He asks if they've talked to him.
 
-The little girl turns to Oliver and says ``Of course we talk to you''.  Jonah is ejected via closing train doors. 
+The little girl turns to Oliver and says ``Of course we talk to you''.  Jonah is ejected via closing train doors.\\
 
 
-
+{\parskip=0pt
 \ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶ }  (Jonah) Apparently they are going to analyze him
 
 \ding{228} {\color[RGB]{68,68,68}▶ } (people in Ops, usually Rook) You need to make him try harder.  
@@ -159,7 +159,7 @@ The little girl turns to Oliver and says ``Of course we talk to you''.  Jonah is
 \ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶ } What do I need to try?
 
 \ding{228} {\color[RGB]{68,68,68}▶ } We're not really sure. Make him open up. 
-
+}
 
 
 \sceneHeadline{ Memory : Guns Out} 
@@ -256,7 +256,11 @@ Oliver seems to remember more and asks Jaya, ``What do I need to do?''
 
 Jonah relays Rook's caution, ``He's analyzing too much.''
 
-``Well you can start by completing the mission.''``I thought I did, wasn't that the mission objective?  It was a success.''``Fuck no it wasn't!  I'm down a team member!  Meaning you!''
+``Well you can start by completing the mission.''
+
+``I thought I did, wasn't that the mission objective?  It was a success.''
+
+``Fuck no it wasn't!  I'm down a team member!  Meaning you!''
 
 
 
@@ -269,13 +273,15 @@ Oliver feels sharp rage.
 Hayley wonders if that's what happened to the bodies at Nicklepan?  
 
 
+{\parskip=0pt
+~
 
 \ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶ } Was that getting emotional?
 
 \ding{228} {\color[RGB]{68,68,68}▶} That was better.  I need to talk to Trenton.... Trenton and Victor agree, we need him more emotional but more analytical of the emotions... wait... one moment.   ..... (stuttered start) .... we need more readings. 
 
 \ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶ } Figure out what you want and get back to me
-
+}
 
 
 \textgreater \textgreater \textgreater \textgreater  We on the train see things flashing by at a high rate. Fragments of memories ``first kiss'', ``when I wet my bed'', ``When I decided not to go to the academy'', etc
@@ -381,6 +387,8 @@ Jonah and Hayley do their best to convince Oliver that everything is normal.
 Oliver laughs.
 
 
+{\parskip=0pt
+~
 
 \ding{228} {\color[RGB]{68,68,68}▶}  The analogy Trenton is using is... These aren't his words... It's like his sphincter was clenched and he let go.  I apologize he couldn't come up with a less colorful analogy.  
 
@@ -399,7 +407,7 @@ Oliver laughs.
 \ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶ } Jonah replies, ``What is the context?''
 
 \ding{228}\ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶▶ } At hearing his voice in her head, Hayley just says a delighted, ``Hi!'' and fails to answer his question.
-
+}
 
 
 
@@ -448,6 +456,9 @@ Oliver bitterly laughs.
 
 Oliver finds that he was applying first aid to the little girl.
 
+{\parskip=0pt
+~
+
 \ding{227}\ding{227} \hl{There is a disturbance in the Force}\footnote{\textbf{Nathaniel Ford }I probably should have elaborated at the time, but if you think of the connection between the four of you being a boat, it's like someone really heavy jumped into the boat and then jumped out.
 
 Or, more precisely, if you're an upside down four-sided die, with Oliver as the downward point upon which the die is being spun, the die is suddenly spun the other direction, and the reversed again. \textsubscript{06/01/14 11:34am}}.
@@ -464,7 +475,7 @@ Or, more precisely, if you're an upside down four-sided die, with Oliver as the 
 
 \ding{228} {\color[RGB]{68,68,68}▶}  if you see the girl, take her down at all costs. 
 
-
+}
 
 \sceneHeadline{Memory : Scars} 
 
@@ -538,6 +549,9 @@ THE DOORS SHUT
 {[}Hayley gets Yellow card- ``The Things We Carry, The Pain We Walk With''{]}
 
 
+{\parskip=0pt
+~
+
 
 \ding{228} {\color[RGB]{68,68,68}▶}  This is going very well, we just got a second lock
 
@@ -556,6 +570,7 @@ THE DOORS SHUT
 \ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶} Tell me next time they say anything
 
 \ding{228}\ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶▶} Jaya says it's not true, but I think I'm seeing through Octavia's eyes. 
+}
 
 so many wooooooords
 
@@ -603,6 +618,9 @@ Eventually he lands on the grenade, and at the last moment his mouth ticks up wi
 
 \ding{227}\ding{227} In Hayley's brain:  The face of a man, intensely concentrating.  Blood is running down the side of his head and dripping on the ground.  There's anger and thinking and decision making.  Graves would be a suitable target since it does not have any important resources.  The order is given: INITIATE GLASS ROAD. (Graves is a subway stop in the directorate) 
 
+{\parskip=0pt
+~
+
 
 
  \ding{228}\ding{228}\ding{228}{\color[RGB]{68,68,68}▶▶▶ } Hayley reports this to Jonah.  The folks in Ops ask for a confirmation that they said ``Glass Road''. 
@@ -610,7 +628,7 @@ Eventually he lands on the grenade, and at the last moment his mouth ticks up wi
 \ding{228}\ding{228} {\color[RGB]{68,68,68}▶▶ } Jonah reports that Oliver appears to be forgetting things.
 
 \ding{228} {\color[RGB]{68,68,68}▶ } Rook says that the memories he's dwelling on are important to him.  We have to find the locus of that memory.
-
+}
 
 
 
@@ -899,7 +917,9 @@ Hayley tries to jump into the Orc and gets violently rejected.  IT FUCKING HURTS
 
 ``Why would I do that?''
 
-``We want to get to know you.  It is the one way you will see her again.'' ``I was fascinated with you, the way you fight.  I could see how good of a fight it would be.''
+``We want to get to know you.  It is the one way you will see her again.''
+
+``I was fascinated with you, the way you fight.  I could see how good of a fight it would be.''
 
 ``She'll be happy to know you are back,'' says Oliver
 
@@ -953,7 +973,9 @@ Oliver runs after the Orc.
 
 ``What?  The team?  You mean Jonah and Hayley?''
 
-``Who's Jonah?''``Eh...Jonah's easy to forget.  But Hayley!  You must remember Hayley.''  Jaya makes a gesture of a woman's curvy silhouette.  Oliver shakes his head.
+``Who's Jonah?''
+
+``Eh...Jonah's easy to forget.  But Hayley!  You must remember Hayley.''  Jaya makes a gesture of a woman's curvy silhouette.  Oliver shakes his head.
 
 
 
@@ -1098,6 +1120,9 @@ He leans into the feeling of nothing.  The air gets thin and he eventually goes 
 Many years later, the cylinder with the blinking light's battery runs out. 
 
 
+{
+  \parskip=3mm
+  % HOOOOOORrrrrible hack to fit content onto these last too pages, else it bumps over and adds 4 more blank pages...
 
 \jumpHeadline{Quotes}
 
@@ -1196,8 +1221,9 @@ Rebecca: I do the thing that my people tell me to do
  Proud: You are better than most, and are frustrated when they don't see it.}\footnote{\textbf{Rebecca S. }Damnit, I should have intercepted this one... \textsubscript{05/28/14 11:07pm}}
 
 
+}
 
-\vspace{\fill}
+%\vspace{\fill}
 
 \begin{flushright}
 \textsubscript{last edited by \textbf{Suko T} @ 07/10/15 12:30am}
