--- a/4T/ch26.tex
+++ b/4T/ch26.tex
@@ -14,12 +14,7 @@ Coping.  TA-style.
 
 
 
-\noindent\hrulefill
-
-
-
-
-\sceneHeadline{Ops}
+\jumpHeadline{Ops}
 
 Jonah comes to full awareness first, having been half-aware of what was going on in SAC-09 already.  He lies still for several minutes, not opening his eyes.  Jaya does likewise.
 
@@ -233,10 +228,10 @@ Jaya grabs the bottle and leaves.  She passes Carruthers in the hall and they sa
 
 
 
-\textbf{\hl{Medbay}}\footnote{\textbf{Suko T }Best.  Grief.  Counseling.  Ever.  
+\sceneHeadline{\hl{Medbay} - Jaya and Hayley}\footnote{\textbf{Suko T }Best.  Grief.  Counseling.  Ever.  
 ....By TA standards anyway. :D
 
-Loved this scene. \textsubscript{06/19/14 1:47am}}\textbf{- Jaya and Hayley}
+Loved this scene. \textsubscript{06/19/14 1:47am}}
 
 
 
@@ -375,7 +370,9 @@ Jonah runs into Carruthers in the hallway.  They pause an awkward and uncomforta
 
 ``Yes.''
 
-``What did they do to help you?''``They?''
+``What did they do to help you?''
+
+``They?''
 
 ``Swan.  Gerhauser.''
 
@@ -432,7 +429,9 @@ Jaya searches for Jonah for three hours.  She runs into Rook.
 
 ``Operator Langdon's weapon was destroyed,'' says Rook.
 
-``Oh.  Er.  Hm.''``Is Agent Hayley in emotional distress?''
+``Oh.  Er.  Hm.''
+
+``Is Agent Hayley in emotional distress?''
 
 ``Yes, she was crying.''
 
@@ -450,7 +449,9 @@ Jaya thinks and then looks a little alarmed- ``Do you think he-'' and she mimes 
 
 ``I don't know.  Did you look everywhere?''
 
-``Yes I did!  For THREE HOURS.''``What about areas like the men's room-''
+``Yes I did!  For THREE HOURS.''
+
+``What about areas like the men's room-''
 
 ``I checked there.''
 
@@ -799,7 +800,9 @@ Rook begins the debrief by saying that they had identified the location of Opera
 
 Rook addresses Jaya, ``As the commanding officer, please give the report.'' 
 
-``The hell I will!  We need a debrief.  Where the hell were you sending us?''``Do you want this on the record?'' asks Rook.
+``The hell I will!  We need a debrief.  Where the hell were you sending us?''
+
+``Do you want this on the record?'' asks Rook.
 
 ``Yes!''
 
@@ -957,7 +960,9 @@ She sits down.  To Jaya's apparent dismay, she asks Rook ``I would like to reque
 
 ``The purpose of the Stand Alone Complexes is to guard against catastrophic failure of civilization.''
 
-``And this counts?''``Well in some ways, actually, no.  If you look at it one way, this is the pinnacle of your civilization. If you look at it another way, you are quite destitute.''
+``And this counts?''
+
+``Well in some ways, actually, no.  If you look at it one way, this is the pinnacle of your civilization. If you look at it another way, you are quite destitute.''
 
 {[}....{]}
 
@@ -967,7 +972,9 @@ She sits down.  To Jaya's apparent dismay, she asks Rook ``I would like to reque
 
 ``You accessed emotional cores that then sent information back to us.''
 
-``What was your objective?  It wasn't to get him back.''``To thwart Octavian.  Their sister has destabilized their decision making ability, so it is a good time to strike.''
+``What was your objective?  It wasn't to get him back.''
+
+``To thwart Octavian.  Their sister has destabilized their decision making ability, so it is a good time to strike.''
 
 ``What happens to someone that joins Octavian?  Can they be pulled out?''
 
@@ -1021,7 +1028,7 @@ As they stand to leave, the dossier has stopped scrolling.  Rook types something
 
 
 
-\underline{ \textbf{Quotes:} }
+\jumpHeadline{Quotes: }
 
 
 
