--- a/4T/ch27.tex
+++ b/4T/ch27.tex
@@ -51,7 +51,9 @@ Dr. Gerhauser spins and looks at a file on another monitor.  ``Nothing in your r
 
 ``Don't you want the team to do well?''
 
-``And access to the Cistern will make the team do better?''``It will help me protect them better.''
+``And access to the Cistern will make the team do better?''
+
+``It will help me protect them better.''
 
 ``That type of argument may work on my sister, but not on me.  Try asking her.''
 
@@ -143,7 +145,9 @@ Swan blushes and flounders a little, ``Admittedly you have an odd BX and affect,
 
 ``She is?  She seems like a normal doctor.''
 
-``She is, but she's not normal.''``She seems normal to me.''
+``She is, but she's not normal.''
+
+``She seems normal to me.''
 
 ``What do you- nevermind.  So at this base, everyone wears the same uniform, right?  But we all have different skills.  Outwardly the same, but inwardly different.  Dr. Gerhauser, she's more of a scientist.''
 
@@ -339,13 +343,12 @@ Jonah thinks for a moment.  ``May I ask you a personal question?  Are you from h
 
 
 
-
 \sceneHeadline{Bunk- Jaya and Jonah}
 
 Jonah attempts to speak to Jaya about her new arm.  Jaya mostly ignores him and polishes her new arm lovingly.
 
 
-
+\newpage
 
 \sceneHeadline{Ops}
 
@@ -536,7 +539,9 @@ The secretary escorts us in.  The office is disorganized, and there's a map on t
 
 ``I can put you on the calendar for the Senators and send the requests for appointments.  But Agent Lorentz...that will have to go up the chain.''
 
-``How long were you in the last war?  It wasn't pleasant was it?''``What are you driving at, son?'' asks Ogleby.
+``How long were you in the last war?  It wasn't pleasant was it?''
+
+``What are you driving at, son?'' asks Ogleby.
 
 ``There's a point where you have to make a decision.''
 
@@ -544,7 +549,9 @@ The secretary escorts us in.  The office is disorganized, and there's a map on t
 
 ``We were at Borroughs and Nicklepan.''
 
-``What was the story with Nicklepan anyway?  They just ceased communication.''``They ceased everything.  Everyone is gone.  There is no one left to contact.''
+``What was the story with Nicklepan anyway?  They just ceased communication.''
+
+``They ceased everything.  Everyone is gone.  There is no one left to contact.''
 
 ``Everyone can't just 'disappear,''' protests Ogleby.
 
@@ -718,7 +725,7 @@ Jonah doesn't reply and Hayley can tell that we're losing the window for a polit
 
 \jumpHeadline{Challenges \& Refreshes }
 
-\begin{itemize}
+\begin{itemize}[noitemsep,topsep=0pt]
 \item Challenge 3: Convince Ogleby that we're telling the truth. Social Chameleon 4 (Jonah) $\rightarrow$ Overcome! \textbf{3 VP (Jonah)}
 \item Challenge 1: Convince Ogleby expedite the request. Air of Command 2 (Jaya) $\rightarrow$ Overcome! \textbf{1 VP (Jaya)}
 \item Challenge 1: Notice. Sixth Sense 1 (Jaya) $\rightarrow$ Matched
@@ -750,17 +757,19 @@ Jonah: My point is that they won't respect someone who has been on the front bec
 Rook: Mr. Langdon should.  You may be able to connect to him over his personal loss.
 
 Jonah: You've never spoken to him, have you?
-}
-
 
 \begin{center}
-\includegraphics[width=12cm]{img/ch27_diplomatic.jpg}
+\includegraphics[width=85mm]{img/ch27_diplomatic.jpg}
 \end{center}
 
-\vspace{\fill}
+%\vspace{\fill}
 
 \begin{flushright}
 \textsubscript{last edited by \textbf{Rebecca S.} @ 05/29/15 10:57pm}
 % Exported @ 08/24/15 3:40pm
 \end{flushright}
+}
+
+
+
 
