--- a/4T/ch28.tex
+++ b/4T/ch28.tex
@@ -133,7 +133,9 @@ Jaya commandeers a private office room from a junior TA agent and they close the
 
 ``And I was supposed to know that meant he was asking for a name?''
 
-``Well yes, when a Citizen repeats something like that it generally means that they want to know the answer.''``Why would he care what the name is?'' asks Jonah.
+``Well yes, when a Citizen repeats something like that it generally means that they want to know the answer.''
+
+``Why would he care what the name is?'' asks Jonah.
 
 ``Because Citizens care about names, names are important to them,'' replies Hayley.
 
@@ -193,11 +195,15 @@ Jaya commandeers a private office room from a junior TA agent and they close the
 
 ``What??  Why did he accept the appointment then?''
 
-``He didn't accept the appointment, his assistant did.''``And they didn't include any names?'' asks Jaya.
+``He didn't accept the appointment, his assistant did.''
+
+``And they didn't include any names?'' asks Jaya.
 
 ``No, of course it included our names, but why would it have included the requestor's name?''
 
-``Why wouldn't it?''``Most appointments are set up by assistants, why would he want to know what the assistant's name is?''
+``Why wouldn't it?''
+
+``Most appointments are set up by assistants, why would he want to know what the assistant's name is?''
 
 
 
@@ -687,7 +693,7 @@ Jaya and Hayley come running up and we start hustling for the TA station.  Befor
 
 \jumpHeadline{Challenges \& Refreshes \& Pool tracking }
 
-\begin{itemize}
+\begin{itemize}[noitemsep,topsep=0pt]
 \item Pool: 9
 \item Challenge 1:  Notice what catches Mr. Langdon's eye. Business Contacts 2 (Jonah) $\rightarrow$ Overcome! \textbf{1 VP (Jonah)}
 \item Challenge 2:  Notice.  Stash 2 (Jaya) $\rightarrow$ Matched
@@ -738,3 +744,8 @@ Hayley: It is psychosomatic.  It's all in my head.
 % Exported @ 08/24/15 3:45pm
 \end{flushright}
 
+\begin{center}
+~
+\vskip 0em
+\includegraphics[width=12cm]{img/hayley.jpg}
+\end{center}
