--- a/4T/ch29.tex
+++ b/4T/ch29.tex
@@ -174,7 +174,7 @@ Jaya nods.  Hayley moves to interpose herself protectively between the three of 
 
 ``No,'' says Hayley.
 
-
+\newpage
 \sceneHeadline{Transit Authority HQ}
 
 We approach the \hl{TA Agent HQ}\footnote{\textbf{Nathaniel Ford }Note that this is the TA Agent HQ, not the TA HQ, which is a bit more decentralized or more accurately places as the Security Triumvirate. \textsubscript{08/11/14 9:58am}} building.  It has been riot-proofed and somewhat upgraded.  Jonah is very nervous and some of it is leaking through to Jaya.  {[}\textit{Challenge 1 Notice.  Streetwise 1 (Jonah) $\rightarrow$ Matched}{]}.  Jonah notices that there are people up on the\hl{roofs of nearby buildings}\footnote{\textbf{Nathaniel Ford }Important to note the people in question were in nearby buildings, not TA HQ. \textsubscript{08/11/14 9:57am}}.
@@ -249,7 +249,9 @@ Malak sneers as Jaya passes him and seems a little disappointed that Jaya won't 
 
 ``She's direct.''
 
-``I'm surprised she's not dead yet.  You must do really good work.''``No, she's just that good,'' says Jonah.
+``I'm surprised she's not dead yet.  You must do really good work.''
+
+``No, she's just that good,'' says Jonah.
 
 ``Agent Lorentz said you would be in a rush.''
 
@@ -608,7 +610,7 @@ And there is a large explosion.
 
 \jumpHeadline{Challenges \& Refreshes \& Pool tracking }
 
-\begin{itemize}
+\begin{itemize}[noitemsep,topsep=0pt]
 \item Pool: 12
 \item Challenge 2: Convince people that we're on official TA business.  Concealment 1 (Jonah) + Agent 1 (Jaya) ) $\rightarrow$ Matched
 \item Challenge 2: Convince Jari to plead our case, despite his doubts..  Flaw 2 Owe Jari a favor (Jonah) $\rightarrow$ Matched
@@ -630,7 +632,7 @@ And there is a large explosion.
 \end{itemize}
 
 
-
+\newpage
 
 \jumpHeadline{VP Totals }
 
@@ -666,3 +668,7 @@ Nate: ``Jaya is not one to let her ego get too far ahead of herself.''
 % Exported @ 08/24/15 3:50pm
 \end{flushright}
 
+\newpage
+\begin{center}
+\includegraphics[width=12cm]{img/book2_jaya_misc.jpg}
+\end{center}
