--- a/4T/ch30.tex
+++ b/4T/ch30.tex
@@ -8,7 +8,7 @@
 
 
 
-Big \underline{  {\color[RGB]{17,85,204}Badaboom}  }.  \hl{Temporary detour into an episode of ER}\footnote{\textbf{Suko T }Gotta say Nate, I just love all these ``Tank'' scenes.  So wonderfully detailed and intriguing. \textsubscript{08/14/14 5:51pm}}.  Then the ladies kick ass and rack up a respectable bodycount.   Jaya kills someone through a wall and takes possession of a cool device.  Hayley scissor kicks a grenade out of the air and unintentionally flirts with Drake Malak.  Jonah asks lots of questions and makes an important decision.  Rook becomes even more awesome.  I didn't know that was possible.
+Big \hl{Badaboom}\footnote{\textbf{Rebecca as editor} link to YouTube video: https://www.youtube.com/watch?v=j8WLYzA0lCs}.  \hl{Temporary detour into an episode of ER}\footnote{\textbf{Suko T }Gotta say Nate, I just love all these ``Tank'' scenes.  So wonderfully detailed and intriguing. \textsubscript{08/14/14 5:51pm}}.  Then the ladies kick ass and rack up a respectable bodycount.   Jaya kills someone through a wall and takes possession of a cool device.  Hayley scissor kicks a grenade out of the air and unintentionally flirts with Drake Malak.  Jonah asks lots of questions and makes an important decision.  Rook becomes even more awesome.  I didn't know that was possible.
 
 
 
@@ -29,7 +29,7 @@ Big \underline{  {\color[RGB]{17,85,204}Badaboom}  }.  \hl{Temporary detour into
 
 
 
-\textit{Jaya comes to, there is a buzzing weight on her chest.  She picks it up- it's a cellphone.  The cellphone has a picture of her (}\textit{no scars, no facial tattoos, with her ear back}\textit{) and a young girl.  Jaya stares at the phone in dumb confusion, letting the call just ring and ring.  Jaya's left arm is whole and hale.  She tries to get up and the nurse tries to get her to lie back down.  A nurse says, ``They were just at }\underline{ \textit{ {\color[RGB]{17,85,204}\hl{L'Enfant} } }\underline{ \textit{ {\color[RGB]{17,85,204} } } }\underline{ \textit{ {\color[RGB]{17,85,204}Plaza}} } }\footnote{\textbf{Nathaniel Ford }Hey! Jaya doesn't have Google! ;-) \textsubscript{08/15/14 10:57am}}\textit{, just brought in a few minutes ago.''}
+\textit{Jaya comes to, there is a buzzing weight on her chest.  She picks it up- it's a cellphone.  The cellphone has a picture of her (}\textit{no scars, no facial tattoos, with her ear back}\textit{) and a young girl.  Jaya stares at the phone in dumb confusion, letting the call just ring and ring.  Jaya's left arm is whole and hale.  She tries to get up and the nurse tries to get her to lie back down.  A nurse says, ``They were just at \hl{L'Enfant Plaza}}\footnote{\textbf{Rebecca as editor} it was a link to a Google map from George Washington University Hospical to the L'Enfant Plaza station in Washington DC}\footnote{\textbf{Nathaniel Ford }Hey! Jaya doesn't have Google! ;-) \textsubscript{08/15/14 10:57am}}\textit{, just brought in a few minutes ago.''}
 
 
 
@@ -176,7 +176,7 @@ One of the guys in the building sees them too and aims a grenade launcher at the
 
 
 
-{[}\textit{Challenge 4: Shoot guy with grenade launcher before he can fire on us.  Saltaremachy 3 (Hayley) + Bodyguard 2 (Hayley) + Memory for Details 1 (Hayley) + Small Unit Tactics 1 (Hayley) $\rightarrow$ Matched}{]}.  Hayley does some quick calculations on how much cover is available for the people in the room, weighed against her memories of grenade blast radii from Nicklepan, and decides to try to take the guy out before he can fire.  She flicks her flashlight on and off which distracts him and causes him to pause for a crucial moment.  She fires at him and hits him, but he still gets the shot off.  Somehow exactly in the right place at the right time, as if she could track its trajectory exactly, Hayley spins, leaps and gracefully \underline{  {\color[RGB]{17,85,204}\hl{scissor kicks}}  }\footnote{\textbf{Nathaniel Ford }lulz \textsubscript{08/18/14 9:06pm}}, the grenade out of the air so that it explodes outside of the building.  Hayley and Drake absorb some concussive pushback, but there is negligible other damage from the blast.  Jonah, attending to Lorentz, misses what Hayley did entirely, but Drake sees the whole thing.
+{[}\textit{Challenge 4: Shoot guy with grenade launcher before he can fire on us.  Saltaremachy 3 (Hayley) + Bodyguard 2 (Hayley) + Memory for Details 1 (Hayley) + Small Unit Tactics 1 (Hayley) $\rightarrow$ Matched}{]}.  Hayley does some quick calculations on how much cover is available for the people in the room, weighed against her memories of grenade blast radii from Nicklepan, and decides to try to take the guy out before he can fire.  She flicks her flashlight on and off which distracts him and causes him to pause for a crucial moment.  She fires at him and hits him, but he still gets the shot off.  Somehow exactly in the right place at the right time, as if she could track its trajectory exactly, Hayley spins, leaps and gracefully \hl{scissor kicks}\footnote{\textbf{Rebecca as editor} link to video: https://www.youtube.com/watch?v=qlwmerKFgAU\#t=10}\footnote{\textbf{Nathaniel Ford }lulz \textsubscript{08/18/14 9:06pm}}, the grenade out of the air so that it explodes outside of the building.  Hayley and Drake absorb some concussive pushback, but there is negligible other damage from the blast.  Jonah, attending to Lorentz, misses what Hayley did entirely, but Drake sees the whole thing.
 
 
 
@@ -292,13 +292,13 @@ Vogel briefly talks into her hush radio and says, ``Drake wants to walk you home
 
 ``Well you did ask for the best...'' says Vogel, raising an eyebrow.
 
-REBECCAxxBEGINxxHIGHLIGHTxx``Yeah well I was expecting....'' says Jaya and she looks Vogel up and down with a smile.
+\hl{``Yeah well I was expecting....'' says Jaya and she looks Vogel up and down with a smile.
 
 ``That's flattering,'' says Vogel.  ``But I have a lot of matters to attend to right now.''  
 
 Jaya offers her a cigarette.  Vogel takes it and says ``I quit'' while tucking it into her pocket.
 
-``Yeah I quit every day too,'' says Jaya nodding in understanding.xxENDxxHIGHLIGHT\footnote{\textbf{Suko T }I really loved this bit. \textsubscript{08/15/14 2:57am}}
+``Yeah I quit every day too,'' says Jaya nodding in understanding.}\footnote{\textbf{Suko T }I really loved this bit. \textsubscript{08/15/14 2:57am}}
 Vogel and Lorentz leave.
 
 
@@ -548,7 +548,7 @@ Jonah gets back onboard and the train pulls out of Terminus Station.
 
 \jumpHeadline{Challenges \& Refreshes \& Pool tracking }
 
-\begin{itemize}
+\begin{itemize}[noitemsep,topsep=0pt]
 \item Pool: 20
 \item Challenge 2: Not be injured.  Flaw 2: Injured right arm (Jaya) $\rightarrow$ Matched
 \item Refresh: Left Arm 3 (Jaya)
@@ -598,20 +598,23 @@ Jonah 2
 \quotedDialog{
 Jaya: We do have Trenton and he's good at these things even if he is an asshole.
 
-Lorentz: Assholes are often the most effective ones at their job.\\[4mm]
+Lorentz: Assholes are often the most effective ones at their job.\\[3mm]
 }
 
 \quotedDialog{
 Jaya: Whatever. All the Senators are assholes.  Aren't they?
 
 Rook: I don't usually classify people by their bodily vacancies
-}
 
-
-\vspace{\fill}
+\begin{center}
+\includegraphics[width=50mm]{img/ch30_hayley_kick.jpg}
+\end{center}
 
 \begin{flushright}
 \textsubscript{last edited by \textbf{Nathaniel Ford} @ 05/07/15 4:28pm}
 % Exported @ 08/24/15 3:56pm
 \end{flushright}
+}
+
+
 
