--- a/4T/ch31.tex
+++ b/4T/ch31.tex
@@ -1,14 +1,12 @@
 \setcounter{chapter}{ 30 }
-\chapter{\textbf{``Backlash'' aka ``Feelings''} }
 
 
+\chapter{\textbf{Backlash} }
 
 
+\subChapterTitle{``Feelings''}
 
-
-\textit{Notes:} Suko and Rebecca
-
-\textit{Date:} Aug 27th, 2014
+\deets{Suko and Rebecca}{Aug 27th, 2014}
 
 
 
@@ -163,7 +161,7 @@ Morgan asks Jonah, ``And if we follow up on our promises?''
 
 ``And he's got a lot of well-trained people,'' says Jaya.
 
-``I have heard a lot about his operational abilities,'' says Morgan.\footnote{\textbf{Nathaniel Ford }I think something got confused here. I *think* the 'how is this relevant' part came before reporting that Mohinder concealed his identity at first. Also, the operational capabilities was said by Morgan, in reference to Drake, yes? \textsubscript{08/29/14 4:09pm}}\footnote{$\rightarrow$\textbf{Suko T }Yup, the relevant part was in reference to Mohinder not revealing himself right away.  I recall something about Jonah saying that he liked that Lorentz wanted to see us for himself, but I couldn't recall the wording or where it fell in the convo.  The Operational comment about Drake?   Interesting.  I totally thought it was about Lorentz since Jaya had been so careful to not mention Drake's name ever. \textsubscript{08/29/14 4:46pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Well, it may have been in reference to the operational capabilities of 'his team', but Morgan probably wouldn't have said, ``I've heard a lot'' about something she knows a lot about. Maybe it's just a matter of wording to indicate she was already acquainted-and-respectful-of Mohinder and his team. \textsubscript{09/01/14 2:58pm}}\footnote{$\rightarrow$\textbf{Suko T }Ah, that makes sense.  Feel free to re-write her dialog to make it clearer- the relationship between Morgan and Mohinder is likely complex enough without misleading dialog :) \textsubscript{09/01/14 11:42pm}}
+\hl{``I have heard a lot about his operational abilities,'' says Morgan.}\footnote{\textbf{Nathaniel Ford }I think something got confused here. I *think* the 'how is this relevant' part came before reporting that Mohinder concealed his identity at first. Also, the operational capabilities was said by Morgan, in reference to Drake, yes? \textsubscript{08/29/14 4:09pm}}\footnote{$\rightarrow$\textbf{Suko T }Yup, the relevant part was in reference to Mohinder not revealing himself right away.  I recall something about Jonah saying that he liked that Lorentz wanted to see us for himself, but I couldn't recall the wording or where it fell in the convo.  The Operational comment about Drake?   Interesting.  I totally thought it was about Lorentz since Jaya had been so careful to not mention Drake's name ever. \textsubscript{08/29/14 4:46pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Well, it may have been in reference to the operational capabilities of 'his team', but Morgan probably wouldn't have said, ``I've heard a lot'' about something she knows a lot about. Maybe it's just a matter of wording to indicate she was already acquainted-and-respectful-of Mohinder and his team. \textsubscript{09/01/14 2:58pm}}\footnote{$\rightarrow$\textbf{Suko T }Ah, that makes sense.  Feel free to re-write her dialog to make it clearer- the relationship between Morgan and Mohinder is likely complex enough without misleading dialog :) \textsubscript{09/01/14 11:42pm}}
 
 ``Well I don't know about that but he had us talk to his seconds so we didn't even know if we would get to speak to Agent Lorentz or not,'' says Jaya.
 
@@ -305,7 +303,7 @@ In the tank is Signe.  Rook looks up at Jonah and nods, ``Operator''  Rook turns
 
 ``I didn't know that,'' says Jonah.
 
-``Well we didn't know that she was reconstituted until recently. \footnote{\textbf{Nathaniel Ford }I think this is jumbled, to. ``We didn't know until recently'' refers to her being reconstituted, not her belonging to Tertius. \textsubscript{08/29/14 4:16pm}}\footnote{$\rightarrow$\textbf{Suko T }That makes more sense, though sad for Signe.  Is the rewrite better? \textsubscript{08/29/14 4:47pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Yes. :) \textsubscript{11/07/14 6:58pm}} It \textit{is} possible to discharge someone.  Tertius almost never did it because they were vain.  Octavian never did- too egomaniacal.''
+``\hl{Well we didn't know that she was reconstituted until recently.} \footnote{\textbf{Nathaniel Ford }I think this is jumbled, to. ``We didn't know until recently'' refers to her being reconstituted, not her belonging to Tertius. \textsubscript{08/29/14 4:16pm}}\footnote{$\rightarrow$\textbf{Suko T }That makes more sense, though sad for Signe.  Is the rewrite better? \textsubscript{08/29/14 4:47pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Yes. :) \textsubscript{11/07/14 6:58pm}} It \textit{is} possible to discharge someone.  Tertius almost never did it because they were vain.  Octavian never did- too egomaniacal.''
 
 Rook says, ``It was our hope that we could get Esther discharged.''  Dr. Gerhauser starts staring off into space again.  Rook continues, ``Now that that is not possible, we can lay that issue to rest.  But they can bring someone back into their network.''
 
@@ -337,7 +335,9 @@ Rook says, ``It was our hope that we could get Esther discharged.''  Dr. Gerhaus
 
 Jonah pauses to think for a long moment.  ``If I did this, what is my exposure to Octavius?''
 
-Dr. Gerhauser replies, ``You would be well protected.  It's like hitting a target after having to bounce the bullet off of two walls first.  It involves math you wouldn't understand.  It's essentially impossible.  Also, you would be using the same channel that Octavian is trying to access, so you would be blocking that path.''``So they would know.''
+Dr. Gerhauser replies, ``You would be well protected.  It's like hitting a target after having to bounce the bullet off of two walls first.  It involves math you wouldn't understand.  It's essentially impossible.  Also, you would be using the same channel that Octavian is trying to access, so you would be blocking that path.''
+
+``So they would know.''
 
 ``Certainly.  But they have less information about Tertius, so their infiltration attempts would be more clumsy and blunt, giving you time to work around them.''
 
@@ -345,7 +345,9 @@ Dr. Gerhauser replies, ``You would be well protected.  It's like hitting a targe
 
 ``We would disconnect you before then,'' says Dr. Gerhauser.
 
-``What are the odds that they would find us?''``The worst case scenario is that they have two locks.  With a third, they can start guessing and it would just be a matter of time,'' says Rook.
+``What are the odds that they would find us?''
+
+``The worst case scenario is that they have two locks.  With a third, they can start guessing and it would just be a matter of time,'' says Rook.
 
 ``How long would it take them to get that third or fourth lock?   How long did it take us?''
 
@@ -353,7 +355,9 @@ Dr. Gerhauser replies, ``You would be well protected.  It's like hitting a targe
 
 Jonah pauses and evaluates the others in the room.  Rook is inscrutable as always.  Signe is unconscious but very naked and very pretty.  Dr. Gerhauser looks wounded, like she is barely holding herself together.  Between Signe and Dr. Gerhauser, Jonah's feeling a bit turned on, whether he wants to or not.
 
-``Alright.  I'll do it,'' he says. ``But I want you,'' he looks at Dr. Gerhauser pointedly, ``to teach me how to turn the link on and off.''``It requires a lot of equipment and power to do that,'' says Dr. Gerhauser.
+``Alright.  I'll do it,'' he says. ``But I want you,'' he looks at Dr. Gerhauser pointedly, ``to teach me how to turn the link on and off.''
+
+``It requires a lot of equipment and power to do that,'' says Dr. Gerhauser.
 
 ``This feels like Oliver again,'' says Jonah.  ``If something happens to you or I am stranded somewhere, I want to know how to turn it off myself.''
 
@@ -418,7 +422,7 @@ After about 30 minutes, Morgan calls a halt, ostensibly to rebandage their hands
 
 ``He seems like a good guy.  You know, for the brainy sort.''
 
-``Given your recent loss, how well is your team functioning? \footnote{\textbf{Nathaniel Ford }Translation loss: I think she was edging towards talking about adding to the team. I don't think she said 'optimally'. \textsubscript{08/29/14 4:23pm}}\footnote{$\rightarrow$\textbf{Suko T }Closer?  Or would she have said something more simple like ``How is your team operating?'' \textsubscript{08/29/14 4:50pm}}   It's a pity about Operator Langdon.''
+``\hl{Given your recent loss, how well is your team functioning?} \footnote{\textbf{Nathaniel Ford }Translation loss: I think she was edging towards talking about adding to the team. I don't think she said 'optimally'. \textsubscript{08/29/14 4:23pm}}\footnote{$\rightarrow$\textbf{Suko T }Closer?  Or would she have said something more simple like ``How is your team operating?'' \textsubscript{08/29/14 4:50pm}}   It's a pity about Operator Langdon.''
 
 ``Well it was hard to lose Operator Langdon.  But you know what, I think it was actually helpful.  I mean we've really pulled together and are working together even better than before.''
 
@@ -660,7 +664,7 @@ Trenton picks up a bottle and offers Jonah a drink.  It's possibly one of the be
 
 ``Really?''
 
-The braggadocio drops for a second and Trenton says bitterly, ``And I couldn't even save one fucked up little girl.''\footnote{\textbf{Suko T }:( \textsubscript{08/29/14 1:26am}}\footnote{$\rightarrow$\textbf{Rebecca S. }totally \textsubscript{08/29/14 6:55pm}}
+The braggadocio drops for a second and \hl{Trenton says bitterly, ``And I couldn't even save one fucked up little girl.''}\footnote{\textbf{Suko T }:( \textsubscript{08/29/14 1:26am}}\footnote{$\rightarrow$\textbf{Rebecca S. }totally \textsubscript{08/29/14 6:55pm}}
 
 \hl{``Can I ask a question?''}\footnote{\textbf{q.google }In retrospect it's a good thing he didn't say yes. \textsubscript{09/09/14 6:33pm}} says Jonah.
 
@@ -720,7 +724,9 @@ Also, further proof Jari is an asshole to totally innocent people. \textsubscrip
 
 Hayley looks for Carruthers and finds her at the Ready Line.  Carruthers is lying on the ground, bouncing a ball against the far wall and catching it.  She's getting pretty good at it.  Hayley clears her throat softly.  When Carruthers doesn't respond, she says, ``Excuse me, I don't want to bother you but I have something to say to you. If you have a moment.  Operator Carruthers.''
 
-Carruthers takes a moment to look at Hayley.  ``Oh right.  I heard about that, how you ask permission to talk to people.''``It's how I was trained.''
+Carruthers takes a moment to look at Hayley.  ``Oh right.  I heard about that, how you ask permission to talk to people.''
+
+``It's how I was trained.''
 
 ``It's stupid.''
 
@@ -752,7 +758,7 @@ Hayley pauses a moment and when Carruthers doesn't tell her to go away, she says
 
 ``Yes.  Because I made him a promise.  And I have to live to keep that promise.  I have to do what he can't anymore.  I have to protect them now.''
 
-Carruthers starts crying.  ``Javier won't talk to me.''\footnote{\textbf{Suko T }Breaking my heart here.  So much sad! \textsubscript{08/28/14 6:16pm}}
+Carruthers starts crying.  \hl{``Javier won't talk to me.''}\footnote{\textbf{Suko T }Breaking my heart here.  So much sad! \textsubscript{08/28/14 6:16pm}}
 
 Hayley looks sympathetic, ``Operator Gemayel mostly just yells at me now.  But I still have to protect him.  Them.''
 
@@ -806,6 +812,7 @@ Hayley hesitates then offers, ``If you would like, there's a place I go that mak
 
 ``Uh look, I've really got to go.  Just don't tell Lackovich okay?''
 
+{\parskip=3mm
 ``Okay.  I won't tell her.  About this conversation.''
 
 ``Thanks.  I don't have much left.  I don't want them to take my squad away.''
@@ -824,44 +831,18 @@ Hayley hesitates then offers, ``If you would like, there's a place I go that mak
 
 
 \sceneHeadline{Jaya and Rook}
-
+}
+{\parskip=0pt
 At some point Jaya stalks up to Rook and jabs a finger at his chest, and \hl{snarls ``I don't fucking need a god damned matchmaking service or a fucking pimp.'' Without waiting for a response-- because come-on, this is Rook here--}\footnote{\textbf{Suko T }\textless 3 \textsubscript{08/30/14 1:08pm}}she just storms away, looking for Jayce.
 
 
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to highlight for footnote: I think something got confused here. I *think* the 'how is this relevant' part came before reporting that Mohinder concealed his identity at first. Also, the operational capabilities was said by Morgan, in reference to Drake, yes? because:GivenExpected“I have heard a lot about his operational abilities,” says Morgan.Yes he presented himself first as an Agent in training,” says Jonah.
-“How is this relevant?” asks Rook.
-“It shows that he is cagey,” says Jonah.
-“And he’s got a lot of well-trained people,” says Jaya.
-“I have heard a lot about his operational abilities,” says Rook.
-
-	Unable to highlight for footnote: I think this is jumbled, to. "We didn't know until recently" refers to her being reconstituted, not her belonging to Tertius. because:GivenExpectedWell we didn’t know that she was reconstituted until recently.Well we didn’t know that ourselves until recently.
-
-	Unable to highlight for footnote: Translation loss: I think she was edging towards talking about adding to the team. I don't think she said 'optimally'. because:GivenExpectedGiven your recent loss, how well is your team functioning?I am going to ask your team if you are all operating optimally
-
-	Unable to highlight for footnote: :( because:GivenExpectedTrenton says bitterly, “And I couldn’t even save one fucked up little girl.”Trenton says, “And I couldn’t even save one little fucked up girl.”
-
-	Unable to highlight for footnote: Breaking my heart here.  So much sad! because:GivenExpected“Javier won’t talk to me.”“Davis won’t talk to me.”
-
-
-\fi
-
-\vspace{\fill}
+\begin{center}
+\includegraphics[width=6cm]{img/ch31_rook_ink.jpg}
+\end{center}
 
 \begin{flushright}
 \textsubscript{last edited by \textbf{Rebecca S.} @ 05/29/15 10:36pm}
 % Exported @ 08/24/15 4:02pm
 \end{flushright}
+}
 
-
-
-\begin{center}
-~
-\vskip 0em
-\includegraphics[width=12cm]{img/ch31_rook_ink.jpg}
-\end{center}
