--- a/4T/ch32.tex
+++ b/4T/ch32.tex
@@ -215,7 +215,7 @@ Jaya claps her hand over her badge and says, ``I'm not here for the fucking TA. 
 
 Jaya grabs him by the collar with her mechanical arm and drags him into the alley.  She drops him and he looks warily at her arm, ``Jesus! What the fuck is that thing?''
 
-``It's awesome.  It's \textit{my} awesome.  And it's going to be your fucking sadness\footnote{\textbf{Suko T }A thing of beauty, this. \textsubscript{09/17/14 4:07am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 Love this line. \textsubscript{09/19/14 4:28pm}} if you don't fucking take me to my sister.''
+``\hl{It's awesome.  It's \textit{my} awesome.  And it's going to be your fucking sadness}\footnote{\textbf{Suko T }A thing of beauty, this. \textsubscript{09/17/14 4:07am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 Love this line. \textsubscript{09/19/14 4:28pm}} if you don't fucking take me to my sister.''
 
 ``I can take you there but she left very specific instructions...'' says Ricco.
 
@@ -239,7 +239,7 @@ Ricco glares at him, ``Fuck you.''
 
 Jaya marches up to the second guy, ``Where's my sister?''
 
-``She's down the hall.  Asshole stays here,'' says the guy, indicating Jayce.  The guy is alarmed by Jaya's arm but isn't a quick enough thinker to stop Jaya before she starts marching down the hallway to her sister.  \hl{Jaya tells Jayce to shoot anyone who does anything stupid}\footnote{\textbf{Nathaniel Ford }For the record, I think this is the point when Jaya transcended some boundary. \textsubscript{09/19/14 7:54pm}}\_Marked as resolved\_\_Re-opened\_\footnote{$\rightarrow$\textbf{Adam Kenney }It's probably a good thing that Jaya didn't have this policy in our early days. \textsubscript{12/03/14 11:05pm}} and she leaves him there with Ricco.
+``She's down the hall.  Asshole stays here,'' says the guy, indicating Jayce.  The guy is alarmed by Jaya's arm but isn't a quick enough thinker to stop Jaya before she starts marching down the hallway to her sister.  \hl{Jaya tells Jayce to shoot anyone who does anything stupid}\footnote{\textbf{Nathaniel Ford }For the record, I think this is the point when Jaya transcended some boundary. \textsubscript{09/19/14 7:54pm}}\footnote{$\rightarrow$\textbf{Adam Kenney }It's probably a good thing that Jaya didn't have this policy in our early days. \textsubscript{12/03/14 11:05pm}} and she leaves him there with Ricco.
 
 
 
@@ -299,7 +299,7 @@ Padme slaps Jaya again.  ``You're my fucking sister.  \hl{How many kids do I hav
 
 ``I'm really happy I'm alive too.  Now are you going to tell me what the fuck is up? Why are people trying to kill you?  Why are they coming after me?''
 
-``Well I'm a really important person now.  I've got all this information in my head and this arm...They're trying to get at me through you.  'Cause you're my fucking sister and\hl{I love you}\footnote{\textbf{Rebecca S. }Oh shit, somebody call the retcon police! Shouldn't Jaya's arm have fallen off at this point? \textsubscript{09/24/14 8:52am}}\footnote{$\rightarrow$\textbf{Suko T }Ooo... that would have been funny! :D \textsubscript{09/24/14 10:10am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }OH SHIT!!!! \textsubscript{09/24/14 3:20pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }It really should have fallen off. I totally spaced it in the moment. We should discuss at session. \textsubscript{09/24/14 3:22pm}}\footnote{$\rightarrow$\textbf{Suko T }Amended, at least somewhat, although Rebecca is free to write it up more completely. \textsubscript{10/01/14 12:09am}}\footnote{\textbf{Rebecca S. }A vital key for insight into Jaya brain \textsubscript{09/18/14 9:34am}}\footnote{$\rightarrow$\textbf{Suko T }And the fact that she is willing to brave asking Morgan for money says a lot about the strength of Jaya's commitment to her sister. :) \textsubscript{09/18/14 1:06pm}}-''
+``\hl{Well I'm a really important person now.  I've got all this information in my head and this arm...They're trying to get at me through you.  'Cause you're my fucking sister and}\hl{I love you}\footnote{\textbf{Rebecca S. }Oh shit, somebody call the retcon police! Shouldn't Jaya's arm have fallen off at this point? \textsubscript{09/24/14 8:52am}}\footnote{$\rightarrow$\textbf{Suko T }Ooo... that would have been funny! :D \textsubscript{09/24/14 10:10am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }OH SHIT!!!! \textsubscript{09/24/14 3:20pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }It really should have fallen off. I totally spaced it in the moment. We should discuss at session. \textsubscript{09/24/14 3:22pm}}\footnote{$\rightarrow$\textbf{Suko T }Amended, at least somewhat, although Rebecca is free to write it up more completely. \textsubscript{10/01/14 12:09am}}\footnote{\textbf{Rebecca S. }A vital key for insight into Jaya brain \textsubscript{09/18/14 9:34am}}\footnote{$\rightarrow$\textbf{Suko T }And the fact that she is willing to brave asking Morgan for money says a lot about the strength of Jaya's commitment to her sister. :) \textsubscript{09/18/14 1:06pm}}-''
 
 With a small noise, Jaya's mechanical arm disengages and falls off.  Fumbling, she just barely manages to catch it before it hits the floor.  Luckily Padme had turned away at that point to pour them a drink.  Jaya manages to reattach the arm before Padme returns with the drinks, and repeats,  ``\textit{I love you}. \textless and the arm reactivates\textgreater .  And I want you to be okay.  The important thing is that you need to not get caught because that would compromise my position.''\footnote{\textbf{Rebecca S. }A vital key for insight into Jaya brain \textsubscript{09/18/14 9:34am}}\footnote{$\rightarrow$\textbf{Suko T }And the fact that she is willing to brave asking Morgan for money says a lot about the strength of Jaya's commitment to her sister. :) \textsubscript{09/18/14 1:06pm}}
 
@@ -446,9 +446,9 @@ Riva continues, ``Anyway I don't think I'm pregnant.''
 
 ``Yeah.  Well....not recently.  But it's one of the ways I have been able to get more water and food.''
 
-``\hl{An empty apartment}\footnote{\textbf{q.google }Jonah \_did\_ actually live in the apartment before SAC-09. \textsubscript{09/25/14 3:49pm}}?'' says Riva, dubiously.
+``\hl{An empty apartment\footnote{\textbf{q.google }Jonah \_did\_ actually live in the apartment before SAC-09. \textsubscript{09/25/14 3:49pm}}?'' says Riva, dubiously.
 
-``See you have to fit in, look like they do. Live like they do.  Then they give you the money they got.''\footnote{\textbf{Suko T }Rebecca and I were giggling at this because the natural conclusion from this line of reasoning was that Jonah was a prostitute or kept ``mister'' for some sugar mama (or sugar papa, no judging). \textsubscript{09/17/14 3:00pm}}\footnote{$\rightarrow$\textbf{q.google }Yes.  Though it's also a natural conclusion that this is what you do when you have a mark and you are trying to make a hard sell of any other kind. \textsubscript{09/25/14 3:48pm}}
+``See you have to fit in, look like they do. Live like they do.  Then they give you the money they got.''}\footnote{\textbf{Suko T }Rebecca and I were giggling at this because the natural conclusion from this line of reasoning was that Jonah was a prostitute or kept ``mister'' for some sugar mama (or sugar papa, no judging). \textsubscript{09/17/14 3:00pm}}\footnote{$\rightarrow$\textbf{q.google }Yes.  Though it's also a natural conclusion that this is what you do when you have a mark and you are trying to make a hard sell of any other kind. \textsubscript{09/25/14 3:48pm}}
 
 Riva looks like she almost is catching onto Jonah's hints but not quite.
 
@@ -626,7 +626,7 @@ He trusts you kid, and he'll give you the best deal he can, but he's leaving \_e
 
 ``So what do I tell mom and dad?  I...can't tell them that.  So I just get them to the train and you'll talk to them?''
 
-``Yeah.  Look, if it had been up to me, three or four years from now, I would have shown you this place and asked if you wanted in.  You know why I didn't want to tell mom and dad?  For the same reason you don't want to tell them.  They can't keep a secret.  Mom's a terrible liar. ... Except that she's a \textit{little} smarter than that and we only \textit{think} she's a terrible liar\footnote{\textbf{q.google }This whole session is suddenly about what hidden dragons everyone's mothers are.... \textsubscript{09/25/14 4:11pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }You might replace 'session' with game and get the same result. \textsubscript{09/25/14 5:26pm}}\footnote{$\rightarrow$\textbf{q.google }You clearly know some things I don't know. ;)
+``Yeah.  Look, if it had been up to me, three or four years from now, I would have shown you this place and asked if you wanted in.  You know why I didn't want to tell mom and dad?  For the same reason you don't want to tell them.  They can't keep a secret.  Mom's a terrible liar. ... \hl{Except that she's a \textit{little} smarter than that and we only \textit{think} she's a terrible liar}\footnote{\textbf{q.google }This whole session is suddenly about what hidden dragons everyone's mothers are.... \textsubscript{09/25/14 4:11pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }You might replace 'session' with game and get the same result. \textsubscript{09/25/14 5:26pm}}\footnote{$\rightarrow$\textbf{q.google }You clearly know some things I don't know. ;)
 
 (Tries not to wonder whether Rook even \_has\_ a mother....) \textsubscript{10/05/14 1:24pm}}.''  Jonah grins, one of the few happy grins he's had in a long time.  ``Have you figured that out yet?''  Riva smiles and nods.  Jonah is quiet for a moment and says, ``I've never told this to anyone else.'' Riva walks up to him and hugs him.  Jonah is shaking.  They hold each other for a while.  When Riva moves to leave, Jonah hands her some boxes of food, one for mom and dad and one for Riva.  Jonah tells her when and where to meet up with him and Riva leaves.  Jonah, still shaking, works his way through half the bottle and wonders how Jaya manages it.
 
@@ -710,7 +710,7 @@ There's a war coming, it's going to walk down the street and take down all the b
 
 ``Does it justify saving you?  Because that's what I want to do.''
 
-Timon's dad frowns.  ``I ain't going to say that this is over.  I ain't going to say that I agree with your choices.  I ain't going to say that you leaving to go join up to be a street medic was a good choice.  I ain't going to agree to that.  But \hl{your mother is sick and I love her very much}\footnote{\textbf{q.google }That's actually his best reason for coming, though he probably doesn't know it yet. \textsubscript{09/25/14 4:25pm}} and bless my soul, despite everything else, I love you too.  So I'll trust you with this.  But we're going to talk about this.  This ain't an example to set for your sister.  And it's no way to honor me or your mother.  Look at at this place.  Look at the pain in this place.  Ain't no one been here who ain't been in pain.''\footnote{\textbf{Suko T }I really liked this monologue.  Says so much about Timon's dad, the life they've led, and their family relationships all at once.  Timon may have got his mother's brains, but he got his dad's sensitivity. \textsubscript{09/17/14 2:12am}}
+\hl{Timon's dad frowns.  ``I ain't going to say that this is over.  I ain't going to say that I agree with your choices.  I ain't going to say that you leaving to go join up to be a street medic was a good choice.  I ain't going to agree to that.  But your mother is sick and I love her very much\footnote{\textbf{q.google }That's actually his best reason for coming, though he probably doesn't know it yet. \textsubscript{09/25/14 4:25pm}} and bless my soul, despite everything else, I love you too.  So I'll trust you with this.  But we're going to talk about this.  This ain't an example to set for your sister.  And it's no way to honor me or your mother.  Look at at this place.  Look at the pain in this place.  Ain't no one been here who ain't been in pain.''}\footnote{\textbf{Suko T }I really liked this monologue.  Says so much about Timon's dad, the life they've led, and their family relationships all at once.  Timon may have got his mother's brains, but he got his dad's sensitivity. \textsubscript{09/17/14 2:12am}}
 
 ``No.  No one who lives to be my age anyway.  Maybe Citizens, but even they...'' Jonah trails off.
 
@@ -913,7 +913,7 @@ Jaya gets on the intercom and says, ``Uh, yeah, there appear to be some refugees
 
 ``Negative, Agent, arrangements have been made,'' says Rook at the same time.
 
-Jaya holds down the talk button so Rook can't speak, but she doesn't say anything for a long moment as she fumes.  Finally she grumbles, ``Understood.''  She gives the Jaya FaceTM\footnote{\textbf{Nathaniel Ford }Beautiful \textsubscript{09/23/14 12:54am}} to Timon's family and then goes to sit with Jayce on the other end of the train.
+Jaya holds down the talk button so Rook can't speak, but she doesn't say anything for a long moment as she fumes.  Finally she grumbles, ``Understood.''  She gives the \hl{Jaya Face\texttrademark}\footnote{\textbf{Nathaniel Ford }Beautiful \textsubscript{09/23/14 12:54am}} to Timon's family and then goes to sit with Jayce on the other end of the train.
 
 
 
