--- a/4T/ch33.tex
+++ b/4T/ch33.tex
@@ -49,7 +49,9 @@ Morgan turns to Jonah. ``For the time being, your family will be restricted to A
 
 Hayley smiles cheerfully, ``Yes, sir.''
 
-``Welcome back.  Dismissed.''``Thank you.''  Hayley fetches her luggage from the train and goes trotting after Jonah.
+``Welcome back.  Dismissed.''
+
+``Thank you.''  Hayley fetches her luggage from the train and goes trotting after Jonah.
 
 Morgan tells Jayce, ``Medbay.''
 
@@ -176,7 +178,9 @@ Morgan counters, ``How about this: you take the antibiotics, you stay off of all
 
 Jaya thinks about it for a long time, clearly desperately trying to think of any other solution.  ``You know...I think that maybe...that might...work out... for a short-''
 
-``Great,'' says Morgan briskly.  ``One more thing.  I'm given to understand that this disease has the ability to transfer through contact with other people.  I request that you stay out of close contact with people to prevent any ping ponging.''``Is Hayley sick?  Is Jonah sick?'' Jaya says, almost sounding concerned.
+``Great,'' says Morgan briskly.  ``One more thing.  I'm given to understand that this disease has the ability to transfer through contact with other people.  I request that you stay out of close contact with people to prevent any ping ponging.''
+
+``Is Hayley sick?  Is Jonah sick?'' Jaya says, almost sounding concerned.
 
 ``No but Jayce is.''
 
@@ -231,7 +235,9 @@ Hayley follows Jonah into the Bunk and sets her luggage down and shuts the door.
 
 ``That's why.''
 
-``It's very nice of you.''``So do you like me now?'' persists Hayley.
+``It's very nice of you.''
+
+``So do you like me now?'' persists Hayley.
 
 ``Did I not like you before?''
 
@@ -325,7 +331,9 @@ The next morning, when Jonah wakes up, Hayley asks, ``So can we kiss again?''
 
 Jonah takes a moment to reply and asks her, ``You thought you were prettier in your dress?''
 
-``Yes.''``Why?''
+``Yes.''
+
+``Why?''
 
 ``Because I am told I am.''
 
@@ -369,7 +377,9 @@ I'm guessing it \_is\_ a reaction to the uniform, and the fact that they heard t
 
 Almost. \textsubscript{10/05/14 2:08pm}}.''
 
-``Why don't you just ask me?''``If I say yes, will you be happy?''
+``Why don't you just ask me?''
+
+``If I say yes, will you be happy?''
 
 ``Yes.''
 
@@ -415,7 +425,9 @@ Jonah realizes this line of reasoning isn't working and tries again.  ``When Oli
 
 ``Hmmm...'' says Hayley thoughtfully.  \hl{``Then there will be a lot of unhappy people in Terminus.''}\footnote{\textbf{Nathaniel Ford }And all the Johns cried out in agony before being silenced... \textsubscript{10/01/14 12:28am}}\footnote{$\rightarrow$\textbf{Suko T }Ha!  Totally misread your comment the first time thinking it was Pimps not Johns.  And now I'm going to hear Imperial March music every time I think of Octavius. \textsubscript{10/01/14 12:53am}}\footnote{$\rightarrow$\textbf{q.google }QooC. \textsubscript{10/05/14 2:38pm}}
 
-``When you're done kissing me and maybe you'd want to do it again...right?''``Maybe.  If you're good at it,'' says Hayley honestly.
+``When you're done kissing me and maybe you'd want to do it again...right?''
+
+``Maybe.  If you're good at it,'' says Hayley honestly.
 
 ``Well that's you, but what's going to happen to \textit{me} is that I'm going to start worrying about you more than I do.''
 
@@ -427,7 +439,7 @@ And more talking and long pauses and pacing.   \hl{In the end Jonah essentially 
 
 
 
-
+\newpage
 \sceneHeadline{Timon's Family}
 
 Micah takes Jonah to see his family.  They are past a door we don't usually go through, and there are other barracks rooms there.  Swan and Hekate have already seen his mom and are treating her cough.  Riva complains that Micah made her run around the gym and stretch and exercise.  \hl{There's not much to do there, so Jonah tries to see them at least once a day and gives them as much information as he can.}\footnote{\textbf{q.google }To be elaborated at the next available SAC-09 session.  If there is one (doesn't pay to jump to conclusions). \textsubscript{10/05/14 2:41pm}}  Micah is with him the entire time anytime he's in that area.
@@ -496,7 +508,9 @@ Rook looks surprised.  ``\hl{I thought we went over this}\footnote{\textbf{q.goo
 
 Jaya looks at Douglas, who has been watching the conversation but not saying a word.  ``So what about retard here?  Are we going to be able to communicate with him?  Because last time we needed Jayce to talk to him and I just sent Jayce to my sister and I don't know if he'll return-''
 
-``Jayce will be returning shortly.''``He's going on this fucking mission?  This mission isn't safe.  This is like going into a danger zone!  He can't takecareofhimselfthisisnotgoingtowork!  Douglas can't even communicate with anyone!  What if something happens to Jayce?''
+``Jayce will be returning shortly.''
+
+``He's going on this fucking mission?  This mission isn't safe.  This is like going into a danger zone!  He can't takecareofhimselfthisisnotgoingtowork!  Douglas can't even communicate with anyone!  What if something happens to Jayce?''
 
 Trenton says under his breath ``Nice to see you actually care about someone.''  
 
@@ -520,7 +534,9 @@ Morgan says, ``Your operational objective is to get Douglas to SAC-04.  Once he 
 
 ``You will follow Directorate chain of command, as per usual,'' says Morgan.
 
-``So if they send their senior Agents, that means they are in charge, correct?''``Yes,'' says Morgan.
+``So if they send their senior Agents, that means they are in charge, correct?''
+
+``Yes,'' says Morgan.
 
 ``What about internally?'' asks Jaya, staring straight at Lackovich.
 
@@ -544,7 +560,9 @@ Hayley thinks and says carefully, ``I'm sorry, you didn't ask if we had any ques
 
 ``Understood,'' says Hayley.  ``I was wondering if Operator Carruthers would be joining one of the teams, Sir.''
 
-``Technically yes, however she will not be \hl{boots on the ground}\footnote{\textbf{Nathaniel Ford }Or boobs on the ground. Fuck you, Fox ``News''. \textsubscript{10/01/14 12:36am}}\footnote{$\rightarrow$\textbf{Suko T }Seconded!  Blegh. \textsubscript{10/01/14 1:38am}}.''``Ah.  Thank you,'' says Hayley.
+``Technically yes, however she will not be \hl{boots on the ground}\footnote{\textbf{Nathaniel Ford }Or boobs on the ground. Fuck you, Fox ``News''. \textsubscript{10/01/14 12:36am}}\footnote{$\rightarrow$\textbf{Suko T }Seconded!  Blegh. \textsubscript{10/01/14 1:38am}}.''
+
+``Ah.  Thank you,'' says Hayley.
 
 ``Oh, it can be done from a distance?'' asks Jonah.
 
@@ -644,7 +662,11 @@ Jonah doesn't answer.
 
 ``\hl{An interesting quote}\footnote{\textbf{q.google }Freshly picked off the cherry tree. \textsubscript{10/05/14 3:01pm}}\footnote{$\rightarrow$\textbf{Suko T }I forgot to note that this is the second time Jaya has been quoted in game, first by Morgan and now by Jonah.  Even our characters find her eminently quote-able! :D \textsubscript{10/05/14 5:14pm}}.  Very well then.  How about we table this discussion for now.''
 
-``One more question.  It appears that the Chief is going through some sort of withdrawal.  I assume you are aware of this?''``Yes. She was suffering from-''``I don't need the details, I just want to know if she will be okay for the mission.''
+``One more question.  It appears that the Chief is going through some sort of withdrawal.  I assume you are aware of this?''
+
+``Yes. She was suffering from-''
+
+``I don't need the details, I just want to know if she will be okay for the mission.''
 
 ``If she stays off the drugs, she won't go into shock, and her system should be clean by the end of it.  But on the mission, she'll be a little rough.''
 
@@ -712,7 +734,9 @@ While Jaya's back is turned, Morgan winks at Hayley and gives her the slightest 
 
 Jaya and Morgan spar.  Jaya is definitely not at her best but Morgan takes it a bit easy on her.  At their first break Morgan says, ``I believe you're on your last day, yes?  Are you going to stay off the drugs?''
 
-``I'm never taking fucking antibiotics again,'' says Jaya fervently.  ``I am fucking done with these.''``I meant the recreational drugs,'' clarifies Morgan.
+``I'm never taking fucking antibiotics again,'' says Jaya fervently.  ``I am fucking done with these.''
+
+``I meant the recreational drugs,'' clarifies Morgan.
 
 ``I, um, what? No.  What?'' says Jaya cleverly.
 
@@ -734,7 +758,11 @@ Morgan says, ``Regardless, I need to know what state you'll be in.''
 
 Morgan walks over to her bag and pulls out a small satchel and tosses it on Jaya's bag.  ``I recommend you go slowly at first.  I can't have you going into shock.  My sister would be upset.  As would I.''
 
-``Yeah no shock.  Lackovich would just fuck everything up.  I'm on top of my game.  I'm definitely going to ease back into the game.''``But I would ask you to seriously consider....not.''``Yeah yeah,'' says Jaya.  ``Let's continue.''And they spar some more.  This time Morgan doesn't take it easy on Jaya and Jaya ends up with many new bruises.
+``Yeah no shock.  Lackovich would just fuck everything up.  I'm on top of my game.  I'm definitely going to ease back into the game.''
+
+``But I would ask you to seriously consider....not.''
+
+``Yeah yeah,'' says Jaya.  ``Let's continue.''And they spar some more.  This time Morgan doesn't take it easy on Jaya and Jaya ends up with many new bruises.
 
 
 
@@ -789,7 +817,9 @@ Lackovich walks up to Jaya, who is eating her gruel, studiously ignoring her and
 
 ``Shut the fuck up Hayley!  Stay out of this.  Just go make out with Carruthers some more.  I don't even care.  Just get out of my hair!''
 
-Lackovich raises a brow at this rant.  Hayley's not upset by Jaya's tone but asks carefully, ``Is that an order?''``No!  Fucking goddammit!''  Jaya flips her gruel bowl over and rage quits the room. The gruel puddles and oozes just like she'd seen Hayley and Carruther's hair move earlier.
+Lackovich raises a brow at this rant.  Hayley's not upset by Jaya's tone but asks carefully, ``Is that an order?''
+
+``No!  Fucking goddammit!''  Jaya flips her gruel bowl over and rage quits the room. The gruel puddles and oozes just like she'd seen Hayley and Carruther's hair move earlier.
 
 Jonah does his best to smooth things over a bit and welcomes Lackovich to the Operator Cadre.  Jonah notices Lackovich rolls her shoulder in a markedly odd way.
 
@@ -1204,10 +1234,10 @@ When Hayley reaches the far side of the bridge, the guy screams and in the dista
 
 
 
-
+\newpage
 \jumpHeadline{Challenges \& Refreshes \& Pool tracking }
 
-\begin{itemize}
+\begin{itemize}[noitemsep,topsep=0pt]
 \item Pool: 3
 \item Pool: 3 + 3 (3rd PC-initiated Scene)
 \item Pool: 6 + 4 (4th PC-initiated Scene)
@@ -1248,5 +1278,11 @@ Jonah 0
 \begin{flushright}
 \textsubscript{last edited by \textbf{Nathaniel Ford} @ 05/07/15 4:28pm}
 % Exported @ 08/24/15 4:10pm
-\end{flushright}
 
+
+
+\newpage
+~
+\vskip 10em
+\includegraphics[width=12cm]{img/book2_misc_thoughtful.jpg}
+\end{flushright}
