--- a/4T/ch34.tex
+++ b/4T/ch34.tex
@@ -833,14 +833,17 @@ We start heading toward the city.  There is a long low wall with a door in it.  
 
 ``The fucking door in the wall!'' Jaya pauses and blinks.  \hl{``I mean, there \textit{is} a door, right?''}\footnote{\textbf{Suko T }\textless 3 \textsubscript{10/10/14 12:25pm}}
 
-``Yes, just look through the door when you get a chance.''``Don't tell me how to do my job!'' Jaya snaps at Jonah.  
+``Yes, just look through the door when you get a chance.''
+
+``Don't tell me how to do my job!'' Jaya snaps at Jonah.  
 
 She and Lackovich coordinate and Jaya gets through the tunnel.  Jaya goes to the nearest building and peeks inside.
 
 {[}\textit{Challenge 2: Don't Flip the Fuck Out.  Gauss Pistol 2 (Jaya) $\rightarrow$ Matched}{]}.   Her gauss pistol is comforting as Jaya confronts some weird shit.  Jaya looks through the window and feels her reflexes take over.  Almost without thought, Jaya finds herself with her gun pointed at a woman, the trigger almost fully depressed, just an iota away from launching a bullet through the woman's brain.  But Jaya manages to ease her finger off the trigger and takes stock of what is going on in the building.  The woman is middle-aged with white hair pulled back into a bun.  She is casting a shuttlecock back and forth on a loom.  \hl{Her eyes are entirely glazed over with white}\footnote{\textbf{Nathaniel Ford }http://content9.flixster.com/question/51/99/14/5199147\_std.jpg \textsubscript{10/10/14 2:35pm}}\footnote{$\rightarrow$\textbf{Suko T }If we get infected by the white stuff, do we get wings 'cause we're girls? \textsubscript{10/10/14 4:17pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }There is only one person... er... entity... in the game thus far remotely both interested and capable of getting wings. \textsubscript{10/10/14 5:22pm}}\footnote{$\rightarrow$\textbf{Suko T }Augh!  \textsubscript{10/10/14 5:40pm}} and she is staring right at Jaya (not at her work).  She doesn't appear to be alarmed and her fingers are moving of their own accord.
 
 
-
+{\parskip=3mm
+%hooooorrible hack to get the last couple pages to squish down and avoid the overflow onto two almost-blank pages
 Jaya eases back away from the window.  Jonah can see she had drawn her pistol and thumbed the safety off.  Jonah radios her, ``Chief?''
 
 Jaya radios back, ``It's cool.  You know how there was that dead guy who wasn't dead?  There's this lady...probably a lady.... who was just looking at me.  Looking at me...'' Jaya peeks back into the room, ``Still looking at me...''
@@ -920,11 +923,9 @@ And somewhere in the streets, there comes the strangled gurgling cry of someone 
 
 
 
-
-
 \jumpHeadline{Challenges \& Refreshes \& Pool tracking }
 
-\begin{itemize}
+\begin{itemize}[noitemsep,topsep=0pt]
 \item Pool: 14
 \item Challenge 1: Notice.  Secret Truth 1 (Jaya) $\rightarrow$ Matched
 \item Challenge 1: Notice (individual challenges).  Thrown back (Jaya).  Thrown back (Hayley).  Forensics 2 (Jonah) $\rightarrow$ Overcome! \textbf{1 VP (Jonah)}
@@ -964,6 +965,7 @@ Jaya 0
 
 Jonah 4
 }
+
 
 \jumpHeadline{Quotes: }
 
@@ -1018,8 +1020,8 @@ Rebecca: Yeah.
 Suko: \hl{You understand.  It's a girl thing.}\footnote{\textbf{Nathaniel Ford }Lulz! I didn't hear this. That's awesome. \textsubscript{10/10/14 2:43pm}}
 }
 
-
-\vspace{\fill}
+}
+%\vspace{\fill}
 
 \begin{flushright}
 \textsubscript{last edited by \textbf{Nathaniel Ford} @ 05/07/15 4:28pm}
