--- a/4T/ch35.tex
+++ b/4T/ch35.tex
@@ -14,17 +14,19 @@
 Surprisingly, only one Red Shirt (Das) died this session.  Jaya took on one of the crazy bad guys by herself and beat it into submission...with her face.  Jonah has vision of himself in another place with his sister grown up into a lawyer.  Hayley gets Carruthers in her head as her new Operator.  Hayley and Jaya end up on a rooftop with lots of Red Shirts, facing a horde of zombies.  Jonah is alone inside the SAC-04 facility with just Drake, Douglas and Jayce.  We have successfully split the party, which I imagine will go very well for everyone.
 
 
+{\parskip=0pt
+~
 
 Once again I color coded the Operator/Agent thoughts.
 
- {\color[RGB]{74,134,232}Jonah to Jaya} 
+ \jonahBrain{Jonah to Jaya} 
 
- {\color[RGB]{255,0,0}Jaya to Jonah} 
+ \jayaBrain{Jaya to Jonah} 
 
- {\color[RGB]{230,145,56}Hayley to Carruthers} 
+ \hayleyBrain{Hayley to Carruthers} 
 
- {\color[RGB]{153,0,255}Carruthers to Hayley}  {\color[RGB]{153,0,255} } \footnote{\textbf{Suko T }I color coded Carruthers' mental communication purple since green (Oliver), blue (Jonah), red (Jaya), orange (Hayley) were already claimed.  I wanted to make her a less saturated color to represent the connection distance but it was such a pain to read that I switched it to this. \textsubscript{11/02/14 12:01am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Ok, can I just say I love how much thought you put into this? \textless 3 \textsubscript{11/02/14 1:52am}}\footnote{$\rightarrow$\textbf{Suko T }Thanks!  It was this or go slowly insane by typing ``\_\_\_ thought to \_\_\_'' over and over. :) \textsubscript{11/03/14 12:36am}}
-
+ \carBrain{Carruthers to Hayley}  {\color[RGB]{153,0,255} } \footnote{\textbf{Suko T }I color coded Carruthers' mental communication purple since green (Oliver), blue (Jonah), red (Jaya), orange (Hayley) were already claimed.  I wanted to make her a less saturated color to represent the connection distance but it was such a pain to read that I switched it to this. \textsubscript{11/02/14 12:01am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Ok, can I just say I love how much thought you put into this? \textless 3 \textsubscript{11/02/14 1:52am}}\footnote{$\rightarrow$\textbf{Suko T }Thanks!  It was this or go slowly insane by typing ``\_\_\_ thought to \_\_\_'' over and over. :) \textsubscript{11/03/14 12:36am}}
+}
 
 
 \jumpHeadline{The Village}
@@ -878,7 +880,7 @@ As Drake passes the threshold of this door, Jonah gets a sense that something ha
 
 
 
-
+\newpage
 \sceneHeadline{The Killing Fields}
 
 At that moment, outside, the 100 or so vacant-looking people out in the square suddenly pick someone from PG1, PG2 or the folks in the Cave and focus on them suddenly.
@@ -940,7 +942,7 @@ It would be awesome if the lady (the one Victor has a crush on!) is the SAC-01 P
 
 \jumpHeadline{Challenges \& Refreshes \& Pool tracking }
 
-\begin{itemize}
+\begin{itemize}[noitemsep,topsep=0pt]
 \item Pool: 6
 \item Challenge 1: Notice.  Thrown back
 \item Challenge 1: Notice.  Agent 1 (Jaya) $\rightarrow$ Matched
@@ -1062,6 +1064,7 @@ Heads-up Display 4
 
 \jumpHeadline{THE CARDS }
 
+{\parskip=0pt
 The Omen- Green (triggered)
 
 Children of the Corn- Green (triggered)
@@ -1073,7 +1076,7 @@ Poltergeist- Red
 Let the Right One In- Red (triggered)
 
 Misery- Orange
-
+}
 
 \jumpHeadline{Flaws left at end of session }
 
@@ -1099,7 +1102,7 @@ Drake's team: Takashiri, Madelyn, Pipes
 
 PG2: Breccan
 }
-
+\newpage
 \jumpHeadline{VP Totals }
 
 {\parskip=0pt
