--- a/4T/ch36.tex
+++ b/4T/ch36.tex
@@ -275,7 +275,7 @@ Douglas is fiddling with the door.  Jonah can see the ``Ha!'' guy wandering arou
 Douglas opens the door and sheaths his weapon.  They step into the antechamber.   Jonah lowers his weapon, Drake and Jayce do not.  The door behind them shuts, the one in front of them opens.  The guy at the table looks up and squints at the visitors.  His eyes are covered by the white film.  ``Ha!'' guy appears to be wandering around, putting out food and moving things around.
 
 
-
+\newpage
 
 \sceneHeadline{The Killing Fields}
 
@@ -342,7 +342,9 @@ Jonah explains, ``We come from another 'world moment'.  A different Praetor.  Th
 
 ``Many lives have been interrupted.  \hl{In time those too can be healed.  If you remember.}\footnote{\textbf{Suko T }Jonah asks so may questions but not about this intriguing tidbit! Argh!! \textsubscript{11/18/14 1:41am}} But, the Praetor is tired.  Do you wish the mantle?''
 
-``The what? Sorry, I do not understand.''``Do you wish to become the Praetor?  As the one who came before?  You will have to negotiate with Supay of course,'' says the man quietly.
+``The what? Sorry, I do not understand.''
+
+``Do you wish to become the Praetor?  As the one who came before?  You will have to negotiate with Supay of course,'' says the man quietly.
 
 ``Supay??''
 
@@ -378,7 +380,9 @@ Jonah explains, ``We come from another 'world moment'.  A different Praetor.  Th
 
 ``Because we're not!  Have you been outside? We walked in and Supay tried to kill us!!!'' says Jonah loudly and angrily, clearly losing his temper. {[}\textit{Refresh: Social Chameleon 2 (Jonah)}{]}
 
-``I have not. It all happened so fast...I am sorry if you were offended,'' says the man placatingly.``I am not offended, I'm \textit{terrified}!  Do you know what that is like??'' demands Jonah.  He looks over at the ``Ha!'' guy who is just rocking in place.``I wish I could empathize, but I do not know if I can. Warnings were posted.''``\textit{Warnings}.'' says Jonah, still sounding upset.
+``I have not. It all happened so fast...I am sorry if you were offended,'' says the man placatingly.``I am not offended, I'm \textit{terrified}!  Do you know what that is like??'' demands Jonah.  He looks over at the ``Ha!'' guy who is just rocking in place.``I wish I could empathize, but I do not know if I can. Warnings were posted.''
+
+``\textit{Warnings}.'' says Jonah, still sounding upset.
 
 ``Yes so that those from other world moments would not come into conflict with ours.''
 
@@ -410,7 +414,9 @@ Jonah explains, ``We come from another 'world moment'.  A different Praetor.  Th
 
 ``You said the Praetor is tired?
 
-``He has been damaged.  It is beyond repair.  We are very good at repair.  \hl{At memory.}\footnote{\textbf{Suko T }ORLY?  Hmmm... seems to be a lot of not remembering going on... \textsubscript{11/18/14 1:44am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford} Well, there is memory and then there is world-moment memory. \textsubscript{11/18/14 11:31am}}  Very good.''``I'm sorry,'' says Jonah.
+``He has been damaged.  It is beyond repair.  We are very good at repair.  \hl{At memory.}\footnote{\textbf{Suko T }ORLY?  Hmmm... seems to be a lot of not remembering going on... \textsubscript{11/18/14 1:44am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford} Well, there is memory and then there is world-moment memory. \textsubscript{11/18/14 11:31am}}  Very good.''
+
+``I'm sorry,'' says Jonah.
 
 ``Did you cause this damage?'' ask the robed man curiously.
 
@@ -462,7 +468,9 @@ Jonah addresses the robed man again. ``What sort of person do you need be your P
 
 ``We do not know who your Praetor is.''
 
-``Do they work together or not?  Is it a group?  Or simply a post?''``It is a post. But also a family.  A collaboration.  A career,'' says the robed man.
+``Do they work together or not?  Is it a group?  Or simply a post?''
+
+``It is a post. But also a family.  A collaboration.  A career,'' says the robed man.
 
 ``Our Praetor sent us because our complex is under threat by something that devours places alive.  Like a disease. We need all the help we can get.  If you think we can provide you with a Praetor, I suspect that our Praetor is willing to do this.  But we need to know what will be expected of such a person.''
 
@@ -865,7 +873,7 @@ At all the fumes and smoke, Hayley moans a bit and turns a bit green like she's 
 \textbf{{[}13 Tokens remain{]}}
 
 
-
+\newpage
 
 \sceneHeadline{SAC-09}
 
@@ -986,9 +994,13 @@ Dr. Gerhauser pulls out a device and hands it to Jonah. ``Here is your interlock
 
 ``How long does this take?''
 
-``Effectively a couple of minutes once we were powered up to engage the synchronicity and engage the lock.''``Should I expect a similar sense of disorientation?''
+``Effectively a couple of minutes once we were powered up to engage the synchronicity and engage the lock.''
 
-``Yes.''``Is there anything I should know about Signe's mental state?'
+``Should I expect a similar sense of disorientation?''
+
+``Yes.''
+
+``Is there anything I should know about Signe's mental state?'
 
 Dr. Gerhauser looks at Signe and Rook looks up.  She says, ``We are uncertain as to what Signe's mental state is going to be.''
 
@@ -1006,7 +1018,9 @@ Suko \& I were discussing (cackling with glee?) about the Trenton/Jonah situatio
 
 Dr. Gerhauser says carefully, ``We have not spoken to Trenton directly about what is going on here with Signe.  He knows that she is compromised and that we are keeping her sedated to keep her from being further compromised.  He does not know the details of how far this is proceeding.''
 
-``What am I allowed to tell him?''``We expect that once you're in position, she will become safe and she will be allowed to see him.  It will be some hours before we are ready to do this so you should spend the time to satisfy that you can turn the connection on and off.  I can show you demo and training modes to practice.''
+``What am I allowed to tell him?''
+
+``We expect that once you're in position, she will become safe and she will be allowed to see him.  It will be some hours before we are ready to do this so you should spend the time to satisfy that you can turn the connection on and off.  I can show you demo and training modes to practice.''
 
 ``If I turn it off, does that mean she's again vulnerable?''
 
@@ -1257,7 +1271,9 @@ Jaya actually disengages and steps back, ``You know, I've been talking to Jonah.
 
 ``Yeah!  I'll fix everything!'' Jaya disengages again so she can think.  ``Uh, is this about Hayley?  Because she's really been progressing well-''
 
-``This isn't about Hayley,'' interrupts Morgan again.  Jaya is at a loss.  ``So I'm going to ask you to complete a mission for me. Which I think you will find useful to you as a leader.''``Yeah!  Is there extra hazard pay?''
+``This isn't about Hayley,'' interrupts Morgan again.  Jaya is at a loss.  ``So I'm going to ask you to complete a mission for me. Which I think you will find useful to you as a leader.''
+
+``Yeah!  Is there extra hazard pay?''
 
 ``I'm going to outline this mission for you.  It's very simple, you only have to do three things.  But I understands woman of our nature can become passionate-''  
 
@@ -1457,7 +1473,7 @@ Rook comes back into the room.  They put \hl{Jonah in the tank}\footnote{\textbf
 
 \jumpHeadline{Challenges \& Refreshes \& Pool tracking }
 
-\begin{itemize}
+\begin{itemize}[noitemsep,topsep=0pt]
 \item Pool: 28
 \item Refresh: Sidearm 3 (Jaya)
 \item Challenge 2: Notice.  Nose for Breadcrumbs 2 (Hayley) $\rightarrow$ Matched
@@ -1501,12 +1517,13 @@ Rook comes back into the room.  They put \hl{Jonah in the tank}\footnote{\textbf
 
 \jumpHeadline{VP Totals }
 
+{\parskip=0pt
 Hayley 3
 
 Jaya 2
 
 Jonah 0
-
+}
 
 
 
