--- a/4T/ch4.tex
+++ b/4T/ch4.tex
@@ -63,7 +63,7 @@ BTW - Mention something about buying skills?   Nate did! It's awesome! Kinda' li
 {[}Rules modification: All point spent on skills will be matched by equal points for the group stash.  This allows us to grow the common pool of useful devices and perks, and helps compensate for the pain point of being separated and being out of skills.{]}
 
 
-
+\newpage
 \jumpHeadline{ Challenges } 
 
 
