--- a/4T/ch7.tex
+++ b/4T/ch7.tex
@@ -308,6 +308,12 @@ Oliver: 3
 \extraIndent{- Rebecca}
 
 
+\begin{flushright}
+~
+\vskip 0em
+\includegraphics[width=12cm]{img/ch7_jaya_prisoner.png}
+\end{flushright}
+
 \vspace{\fill}
 
 \begin{flushright}
