--- a/4T/ch9.tex
+++ b/4T/ch9.tex
@@ -36,7 +36,7 @@ Hayley: Rifle 0 ‚Üí 1 (may also be buying down a Flaw)
 
 
 VP expenditures on Character spreadsheet. We have communal points to spend!  Suggestions were for body armor. And lasers. :D
-
+\newpage
 \jumpHeadline{ SAC-09 } 
 
 
@@ -284,7 +284,7 @@ Hayley assures her that they are fine, and the neighbors seem nice.  Hayley tell
 
 Hayley thanks her for the letter, mentioning that it is the first letter she ever received.  Signe says Trenton thought it would be helpful for her to write the letter.  Hayley asks if they can continue to write to each other.  Signe agrees but grows pale and excuses herself to go vomit in the other room.  When she returns, Hayley asks her if she is feeling well, and Signe says yes.  Hayley doesn't press her further.  Hayley introduces Signe to ``this new game I just learned, 20 Questions'' and they play that through the night.  When they grow tired, Signe leads her to a bedroom with a large queen bed in the middle and a small bed tucked into an alcove.  Signe indicates that the small bed is her bed and they lie down there and go to sleep.  It does not even occur to Hayley to ask about using the other, much larger bed in the room.
 
-
+\newpage
 \sceneHeadline{Shore Leave: Oliver }
 
 Oliver arrives in Cardoza, carrying his gun (in a nondescript backpack) but wearing civvies.  He scouts around to get the lay of the land and sticks to the shadows and tries to avoid running into people he knows.  If its unavoidable, he ends the conversation quickly and stays as vague as possible.  
@@ -451,7 +451,7 @@ Oliver tries to follow Lackovich but feels too exposed to search outside.  He ge
 \extraIndent{Äù- Dr. Gerhauser to Jonah}
 
 
-
+\newpage
 ``Discretionary allowances are supposed to be used \textit{with discretion}.''
 
 \extraIndent{Äù- Mr. Langdon to Oliver}
@@ -479,8 +479,3 @@ Oliver tries to follow Lackovich but feels too exposed to search outside.  He ge
 \end{flushright}
 
 
-\begin{center}
-~
-\vskip 0em
-\includegraphics[width=12cm]{img/hayley.jpg}
-\end{center}
