--- a/4T/book2.tex
+++ b/4T/book2.tex
@@ -3,6 +3,7 @@
 %\usepackage{pgfpages}
 %\pgfpagesuselayout{4 on 1}[a4paper,border shrink=5mm]
 \usepackage{amsfonts}
+\usepackage{enumitem}
 \usepackage{multicol }
 \usepackage{amssymb}
 \usepackage{color}
